--- a/bicemodded/localisation/english/decisions_l_english.yml
+++ b/bicemodded/localisation/english/decisions_l_english.yml
@@ -176,3 +176,56 @@
  ##
  die_krankenschwester:0 "Die Krankenschwester"
  flying_witches:0 "Flying Witches"
+ 
+ ############### Foreign MIOs ###############
+ available_mio_tt: "§GAvailable§! as §YMilitary Industrial Organization§!: "
+ foreign_mio_decisions_category: "Invite Foreign Industries"
+ invite_GER_henschel_organization: "Invite §Y$GER_henschel_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_SOV_okmo_organization: "Invite §Y$SOV_okmo_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_ENG_vickers_armstrong_eng_organization: "Invite §Y$ENG_vickers_armstrong_eng_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_ITA_fiat_organization: "Invite §Y$ITA_fiat_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_SOV_nevskoye_design_bureau_organization: "Invite §Y$SOV_nevskoye_design_bureau_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_ENG_yarrow_shipbuilders_organization: "Invite §Y$ENG_yarrow_shipbuilders_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_ITA_crda_organization: "Invite §Y$ITA_crda_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_GER_heinkel_organization: "Invite §Y$GER_heinkel_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_ENG_fairey_aviation_organization: "Invite §Y$ENG_fairey_aviation_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_SOV_ilyushin_design_bureau_organization: "Invite §Y$SOV_ilyushin_design_bureau_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_SOV_gaz_organization: "Invite §Y$SOV_gaz_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_GER_opel_organization: "Invite §Y$GER_opel_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_ENG_vauxhall_organization: "Invite §Y$ENG_vauxhall_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_ITA_lancia_organization: "Invite §Y$ITA_lancia_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_CZE_skoda_artillery_organization: "Invite §Y$CZE_skoda_artillery_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_FRA_mas_organization: "Invite §Y$FRA_mas_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_JAP_nissan_organization: "Invite §Y$JAP_nissan_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_CZE_ckd_organization: "Invite §Y$CZE_ckd_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_CZE_skoda_armor_organization: "Invite §Y$CZE_skoda_armor_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_FRA_renault_organization: "Invite §Y$FRA_renault_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_JAP_maizuru_naval_arsenal_organization: "Invite §Y$JAP_maizuru_naval_arsenal_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_JAP_mitsubishi_organization: "Invite §Y$JAP_mitsubishi_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_FRA_bloch_organization: "Invite §Y$FRA_bloch_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_GER_junkers_organization: "Invite §Y$GER_junkers_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_GER_mauser_organization: "Invite §Y$GER_mauser_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+ invite_ENG_john_brown_organization: "Invite §Y$ENG_john_brown_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
+
+ invites_mio_tt: "\n§YInvites Foreign Military Industrial Organization§!:"
+
+
+ ############### Generic Purchase Ship ################
+
+  generic_purchase_old_ships_category:0 "Naval Procurement"
+  generic_purchase_old_ships_category_desc:0 "With the world becoming increasingly unstable, we need to expand our naval power projection capabilities. Luckily for us, some of the major navies may be willing to part with their older vessels."
+  purchase_ships_eng:0 "[ENG.GetFlag] Purchase old [ENG.GetAdjective] Destroyers"
+  purchase_ships_sov:0 "[SOV.GetFlag] Purchase old [SOV.GetAdjective] Battleships"
+  purchase_ships_ger:0 "[GER.GetFlag] Purchase old [GER.GetAdjective] U-Boats"
+  purchase_ships_usa:0 "[USA.GetFlag] Purchase old [USA.GetAdjective] Destroyers"
+
+  #### Generic Refit Civilian Ships ####
+  generic_refit_civilian_ships_category: "Military Refit for Civilian Ships"
+  generic_refit_civilian_ships_category_desc: "Our fleet can not realistically hope to compete with the much larger naval forces that threaten us. We must hastily procure a bigger fleet by refitting civilian vessels for military purposes."
+  refit_to_destroyer: "Refit ships to Destroyers"
+  refit_to_cruiser: "Refit ships to Cruisers"
+  
+  #### Special Forces
+  diversify_special_forces: "Diversify Elite Forces"
+  diversify_special_forces_desc: "Our conventional forces simply aren't enough to combat the oncoming storm. We must innovate."
+  add_potential_special_forces_tree_tt: "Adds §H1§! free Special Forces §HBranch Specialism§!"
