--- a/bicemodded/localisation/english/diplomacy_l_english.yml
+++ b/bicemodded/localisation/english/diplomacy_l_english.yml
@@ -287,7 +287,7 @@
  DIPLOMACY_LEND_LEASE_SET_FROM_PRODUCTION:0 "Or choose a percentage of current production."
  DIPLOMACY_LEND_LEASE_REASON_ENEMY:0 "We can't lend lease with enemies."
  DIPLOMACY_LEND_LEASE_REASON_TARGET_AT_WAR:0 "To send the lend lease, @$TAG$$WHO|H$ must be at war."
- DIPLOMACY_LEND_LEASE_REASON_PUPPET:0 "We can always lend-lease equipment to our puppets."
+ DIPLOMACY_LEND_LEASE_REASON_PUPPET:1 "World tension limit reduced because of our puppets autonomy"
  DIPLOMACY_LEND_LEASE_REASON_PUPPET_DESC:0 "It will lower their autonomy"
  DIPLOMACY_LEND_LEASE_SLIDER_PERC:0 "$PERC|Y0%$ ($NUM|Y$)"
  DIPLOMACY_LEND_LEASE_SLIDER_SET:0 "Set"
@@ -349,7 +349,7 @@
  DIPLOMACY_INCOMING_LEND_LEASE_CANCEL_ACTION_DESC:0 "Stop receiving equipment from current country."
  DIPLOMACY_INCOMING_LEND_LEASE_REASON_ENEMY:0 "We can't request lend lease from our enemies."
  DIPLOMACY_INCOMING_LEND_LEASE_REASON_TARGET_AT_WAR:0 "To request lend lease, we must be at war."
- DIPLOMACY_INCOMING_LEND_LEASE_REASON_PUPPET:0 "We can always request lend-lease equipment from our master."
+ DIPLOMACY_INCOMING_LEND_LEASE_REASON_PUPPET:1 "Our autonomy level is reducing the world tension limit with our master"
  DIPLOMACY_INCOMING_LEND_LEASE_REASON_PUPPET_DESC:0 "It will lower our autonomy"
  DIPLOMACY_REQUEST_LICENSED_PRODUCTION_TITLE:0 "Request License Production"
  DIPLOMACY_MANAGE_LICENSED_PRODUCTION_EXISTING_TITLE:0 "Manage License Production"
@@ -371,6 +371,34 @@
  DIPLOMACY_REQUEST_ACCESS_TO_LICENCE_PRODUCTION_REQUEST_DESC:0 "$COUNTRY|H$ is asking to access your production to make a production license request"
  DIPLOMACY_CANCEL_ACCESS_TO_LICENCE_PRODUCTION_ACTION_DESC:0 "Cancel their access to seeing our production licenses"
  REQUEST_ACCESS_TO_LICENCE_PRODUCTION_DESC:0 "You need access to $TARGET|H$'s production in order to make a request for a production license request."
+ DIPLOMACY_REQUEST_EQUIPMENT_PURCHASE_TITLE: "Purchase request"
+ DIPLOMACY_REQUEST_EQUIPMENT_PURCHASE_DESCRIPTION: "$REQUESTER|H$ wants to buy:\n$EQUIPMENT$\n\n$DELIVERIES$\n$FINISHDATEDESC$\n\nWe will get in total: £civ_factory_output£$TOTAL_PAYMENT|0Y$"
+ DIPLOMACY_REQUEST_EQUIPMENT_PURCHASE_DESCRIPTION_WE_WILL_GET: "We will get £civ_factory_output£$DELIVERY_PAYMENT|0Y$/delivery"
+ DIPLOMACY_REQUEST_EQUIPMENT_PURCHASE_ACTION_DESC: "[TODO] Request equipment for purchase."
+ DIPLOMACY_CANCEL_EQUIPMENT_PURCHASE_TITLE: "[TODO] Cancel Equipment Purchase "
+ DIPLOMACY_CANCEL_EQUIPMENT_PURCHASE_ACTION_DESC: "[TODO] Cancel equipment for purchase."
+ DIPLOMACY_CANCEL_EQUIPMENT_PURCHASE_MESSAGE_TITLE: "$CONTRACT_TYPE|U$ cancelled"
+ DIPLOMACY_CANCEL_EQUIPMENT_PURCHASE_MESSAGE_DESC: "The $COUNTRY|H$ has cancelled our $CONTRACT_TYPE$. The contract was $PROGRESS|%H$ completed.\n\nWe received:\n$RECEIVED$\n\nWe delivered:\n$DELIVERED$\n\nReturned to us:\n$RETURNED$"
+ DIPLOMACY_REQUEST_INTERNATIONAL_MARKET_ACCESS_RIGHTS_TITLE: "Negotiate Market Access"
+ DIPLOMACY_REQUEST_INTERNATIONAL_MARKET_ACCESS_RIGHTS_ACTION_DESC: "Give market access to each other's equipment that is added to the International Market.\n\nBeing in the same faction gives market access automatically. Having access to a faction leader's market also gives access to all members' market."
+ DIPLOMACY_REQUEST_INTERNATIONAL_MARKET_ACCESS_RIGHTS_DESC: "Market access would allow us to buy equipment from each other’s market."
+ DIPLOMACY_REQUEST_INTERNATIONAL_MARKET_ACCESS_RIGHTS_REQUEST_DESC: "$COUNTRY|UY$ is asking for market access to enable us to buy and sell equipment to each other."
+ DIPLOMACY_REVOKE_INTERNATIONAL_MARKET_ACCESS_RIGHTS_TITLE: "Cancel Market Access"
+ DIPLOMACY_REVOKE_INTERNATIONAL_MARKET_ACCESS_RIGHTS_ACTION_DESC: "Cancel our market access and theirs.\n\nWe will no longer be able to buy equipment from each other."
+ DIPLOMACY_REVOKE_INTERNATIONAL_MARKET_ACCESS_RIGHTS_ACTION_DESC_FACTION: "§RCan't cancel market access to faction members.§!"
+ DIPLOMACY_REVOKE_INTERNATIONAL_MARKET_ACCESS_RIGHTS_ACTION_DESC_SUBJECT: "§RCan't cancel market access to a subject.§!"
+ DIPLOMACY_REVOKE_INTERNATIONAL_MARKET_ACCESS_RIGHTS_ACTION_DESC_OVERLORD: "§RCan't cancel market access to your overlord.§!"
+ DIPLOMACY_REVOKE_INTERNATIONAL_MARKET_ACCESS_RIGHTS_ACTION_DESC_SAME_OVERLORD: "§RCan't cancel market access to other subjects of your overlord.§!"
+ DIPLOMACY_REVOKE_INTERNATIONAL_MARKET_ACCESS_RIGHTS_DESC: "We will no longer be able to buy equipment from each other."
+ DIPLOMACY_CLOSED_MARKET: "$COUNTRY|H$ cannot give access to their market due to $REASON$"
+ market_access_rights_general_desc: "$COUNTRY|UY$ has market access with other nations"
+ market_access_rights_general_extended_desc: "$COUNTRY1|UY$ has market access with $COUNTRY2|Y$"
+ market_access_rights_active: "has market access with"
+ equipment_purchase_contract_relation_active: "is selling equipment to"
+ equipment_purchase_contract_relation_receiver_desc: "$COUNTRY|UY$ is buying equipment from other nations"
+ equipment_purchase_contract_relation_receiver_extended_desc: "$COUNTRY2|UY$ is buying equipment from $COUNTRY1|Y$"
+ equipment_purchase_contract_relation_initiator_desc: "$COUNTRY|UY$ is selling equipment to other nations"
+ equipment_purchase_contract_relation_initiator_extended_desc: "$COUNTRY1|UY$ is selling equipment to $COUNTRY2|Y$"
  licence_production_access_receiver_desc:0 "$COUNTRY|UY$ is giving access to its production licenses to other countries."
  licence_production_access_receiver_extended_desc:0 "$COUNTRY2|UY$ is giving access to $COUNTRY1|Y$ to its production"
  licence_production_access_active:0 "has access to production of"
@@ -507,6 +535,13 @@
  DR_PLAYER_ASKING_FACTION:1 "§Y$THEM|U$§! is a player: "
  DR_OPINION:1 "§Y$US|U$§! opinion of §Y$THEM$§!: "
  DR_OPINION_DIPLOMATIC_PRESSURE:1 "£operative_mission_icons_small|7£ Diplomatic Pressure: "
+ DR_TRADE_INFLUENCE: "§Y$US|U$§! trade influence over §Y$THEM$§!: "
+ DR_TRADE_EMBARGO: "§Y$THEM$§! has been embargoed by §Y$US$§!: "
+ DR_HAS_NON_AGGRESSION_PACT: "§Y$THEM$§! has non-aggression pacts with §Y$US$§!: "
+ DR_MARKET_CONTRACT_DURATION: "Length of contract: "
+ DR_MARKET_NO_TRADE_ROUTE: "No valid trade route between countries: "
+ DR_MARKET_TRADE_POS_DESIRE: "§Y$US$§! is willing to trade with §Y$THEM$§!: "
+ DR_MARKET_TRADE_NEG_DESIRE: "§Y$US$§! is unwilling to trade with §Y$THEM$§!: "
  DR_YEARS_DIFFERENCE:0 "Tech difference of requested equipment: "
  DR_LEND_LEASE:0 "The help is welcome: "
  DR_LEND_LEASE_NO_EQUIPMENT_OR_REQUEST_HAS:1 "$SENDER|UH$ has insufficient equipment or §Ywe§! have too much equipment in stockpile."
@@ -570,6 +605,8 @@
  puppet_active:0 "is master of"
  fleets_on_our_borders:0 "Fleets on our borders:"
  long_term_trade_partner:0 "Trade partners"
+ refused_market_trade: "Refused equipment trade"
+ cancelled_market_trade: "Cancelled equipment trade"
  sov_ger_treaty:0 "Soviet-German Treaty"
  sov_ger_treaty_trade:0 "Soviet-German Treaty"
  SOV_FRA_join_comintern_reject:0 "Rejected France joining Comintern"
@@ -1104,6 +1141,7 @@
  CIVIL_WAR_TENSION_DESC:0 "To join a civil war World Tension must be at least $MIN|0H%$. Right now it is only $CURRENT|0R%$."
  AVERAGE_MEMBER_STRENGTH:0 "Average member strength"
  DR_SAME_FACTION_AS:0 "In a faction with $COUNTRY|H$: "
+ DR_COMPETING_FACTIONS: "In another faction than $COUNTRY|H$: "
  DR_US_HELPED_THEM_WITH_COUP:1 "§Y$US|U$§! helped §Y$THEM$§! with the coup: "
  huge_increase:0 "Huge increase in opinion"
  huge_decrease:0 "Huge decrease in opinion"
@@ -1386,8 +1424,8 @@
  embargo_initiator_desc:0 "$COUNTRY|H$ is embargoing other countries"
  embargo_initiator_extended_desc:1 "$COUNTRY1|Y$ is embargoing $COUNTRY2|Y$"
  refused_sanctions_modifier:0 "Refused to embargo us"
- supporting_ethiopia_modifier_ITA:0 "Has supported [ETH.GetName]"
- supporting_ethiopia_modifier_ETH:0 "Has supported [ETH.GetName]"
+ supporting_ethiopia_modifier_ITA:0 "Has supported Ethiopia"
+ supporting_ethiopia_modifier_ETH:0 "Has supported Ethiopia"
  ETH_supported_independence:0 "[ETH.GetName] supported independence struggle"
  ITA_supports_albanian_irredentism:0 "Supports [ALB.GetAdjective] irredentism"
  ITA_ceded_destroyers:0 "Ceded Italian Destroyers to us"
@@ -1404,6 +1442,7 @@
  ETH_uncooperative_subject:0 "Uncooperative Subject"
  HOA_african_cooperation:0 "African Cooperation"
  Hosting_ETH:0 "Hosting Ethiopian Government-in-Exile"
+ same_royal_house: "Same Royal House"
 
 
  ##### SWI Absolute Neutrality System ##########
