--- a/bicemodded/localisation/english/dod_events_l_english.yml
+++ b/bicemodded/localisation/english/dod_events_l_english.yml
@@ -434,11 +434,11 @@
  DOD_hungary.130.t:0 "[From.GetAdjective]s abandon talks"
  DOD_hungary.130.desc:0 "Despite initial successes, it seems that the government of [From.GetLeader] has changed their mind regarding the proposed treaty at the last minute. They have been very quiet about the exact reasons for their decision, but our intelligence service suspects a lack of readiness in their armed forces as the reason."
  DOD_hungary.130.a:0 "Shame."
- DOD_hungary.140.t:0 "Hungary demands the right to rearm"
+ DOD_hungary.140.t:1 "[FROM.GetNameDefCap] demands the right to rearm"
  DOD_hungary.140.desc:0 "Citing the ever worsening political situation in Europe and the complete failure of the League of Nations to stop this, [HUN.GetLeader] has publicly announced that his government will seek to secure the support of neighboring nations to allow for a revision of the Treaty of Trianon. Without mentioning any territorial claims, [HUN.GetLeader] discussed only the restrictions on the Hungarian military.\n\nA delegation from Hungary has arrived in our capital to secure our formal agreement to Hungarian rearmament."
  DOD_hungary.140.a:0 "They must be allowed to defend themselves."
  DOD_hungary.140.b:0 "They plunged the world into war once already!"
- DOD_hungary.141.t:0 "Hungary secures [From.GetAdjective] support for rearmament"
+ DOD_hungary.141.t:1 "[FROM.GetNameDefCap] secures [From.GetAdjective] support for rearmament"
  DOD_hungary.141.desc:0 "Without consulting us, the [From.GetAdjective] government has signed a treaty with Hungary, altering or removing the restrictions of the Treaty of Trianon. Hungary is now allowed to rearm freely and develop all manners of military equipment, including tanks and planes.\n\nWhile it has been an open secret that Hungary has been expanding its army, this new agreement will soon bring them to the point where they could be a military threat to us once again."
  DOD_hungary.141.a:0 "We must strike before it is too late!"
  DOD_hungary.141.b:0 "Lodge a diplomatic protest."
