--- a/bicemodded/localisation/english/effects_l_english.yml
+++ b/bicemodded/localisation/english/effects_l_english.yml
@@ -130,16 +130,21 @@
  EFFECT_SEND_EQUIPMENT_OLD:0 "Send $AMOUNT|Y$ of $EQUIPMENT_NAME|Y$ to $COUNTRY|Y$. Old ones go first."
  EFFECT_SEND_EQUIPMENT_FRACTION:0 "Send $FRACTION|Y1%$ of all stockpile to $COUNTRY|Y$."
  EFFECT_ADD_RESOURCE:0 "Add production of $RESOURCE|H$ in $STATE$."
+ EFFECT_ADD_RESOURCE_NO_STATE: "Add production of $RESOURCE|H$."
  EFFECT_REMOVE_RESOURCE:0 "Remove production of $RESOURCE|H$ in $STATE$."
+ EFFECT_REMOVE_RESOURCE_NO_STATE: "Remove production of $RESOURCE|H$."
  EFFECT_ADD_TEMPORARY_RESOURCE:0 "Add production of $RESOURCE|H$ in $STATE$ for $DAYS|H$ days."
+ EFFECT_ADD_TEMPORARY_RESOURCE_NO_STATE: "Add production of $RESOURCE|H$ for $DAYS|H$ days."
  EFFECT_REMOVE_TEMPORARY_RESOURCE:0 "Remove production of $RESOURCE|H$ in $STATE$ for $DAYS|H$ days."
+ EFFECT_REMOVE_TEMPORARY_RESOURCE_NO_STATE: "Remove production of $RESOURCE|H$ for $DAYS|H$ days."
  EFFECT_CREATE_IMPORT:0 "Create $RESOURCE|H$ import for $IMPORTER|H$ from $EXPORTER|H$."
  EFFECT_CREATE_IMPORT_HAS_DATA:0 "Create $RESOURCE|H$ import for $IMPORTER|H$ from $EXPORTER|H$ since $DATE|H$."
  EFFECT_ENACT_RELATION:0 "Enact $NAME|H$ with $WHO|H$."
  EFFECT_CANCEL_RELATION:0 "Cancel $NAME|H$ with $WHO|H$."
- EFFECT_SET_RULE:0 "Set the rule: "
+ EFFECT_SET_RULE:1 "Set the rule(s): "
  EFFECT_SET_PARTY_RULE:0 "Set the $IDEOLOGY|Y$ party rule: "
- EFFECT_SET_RELATION_RULE:0 "Set the relation rule of $ORIGIN|Y$  to $TARGET|Y$: "
+ EFFECT_ADD_RELATION_RULE_OVERRIDE: "Add relation rule override from $ORIGIN|Y$ to $TARGET|Y$: "
+ EFFECT_REMOVE_RELATION_RULE_OVERRIDE: "Remove relation rule from $ORIGIN|Y$ to $TARGET|Y$: "
  EFFECT_SET_CAPITAL:0 "Moves capital to $STATE|Y$."
  EFFECT_REMOVE_FM_LEADER:0 "$NAME|H$ stops being a Field Marshal.\n"
  EFFECT_REMOVE_CC_LEADER:0 "$NAME|H$ stops being a General.\n"
@@ -158,7 +163,8 @@
  EFFECT_REMOVE_UNIT_LEADER_ROLE:0 "$NAME|H$ stops being a $TYPE$.\n"
  EFFECT_RECRUIT_CHARACTER:0 "Recruit $NAME|H$"
  EFFECT_RETIRE_CHARACTER:0 "Retire $NAME|H$ from $COUNTRY|Y$"
- EFFECT_ADD_TIMED_IDEA:0 "Gains '$IDEA|H$' which grants ($DESC$) for $DAYS|H$ days.\n"
+ EFFECT_ADD_TIMED_IDEA:0 "Gains '$IDEA|H$' which grants ($DESC$) for $TIME_DESC$.\n"
+ EFFECT_TIMED_IDEA_TIME_VALUE: "$VALUE|0H$"
  TIMED_IDEA_DATE:0 "§HWill be removed $DATE$§!."
  IDEA_EXPIRED_HEADER:0 "Idea expired"
  IDEA_EXPIRED_DESC:0 "We no longer get the effects from $IDEA|H$."
@@ -204,8 +210,8 @@
  EFFECT_ADD_EQUIPMENT_TO_STOCKPILE:0 "$AMOUNT|Y*$ units of $EQUIPMENT|Y$ is added to the national stockpile."
  EFFECT_REMOVE_EQUIPMENT_FROM_STOCKPILE:0 "$AMOUNT|Y*$ units of $EQUIPMENT|Y$ is removed from the national stockpile."
  EFFECT_DAMAGE_BUILDING:0 "The $BUILDING|Y$ receives $AMOUNT|-$ levels of damage."
- EFFECT_ADD_COUNTRY_TO_TECH_SHARING_GROUP:0 "@$TAG$$COUNTRY|H$ joins $GROUPNAME|Y$."
- EFFECT_REMOVE_COUNTRY_FROM_TECH_SHARING_GROUP:0 "@$TAG$$COUNTRY|H$ leaves $GROUPNAME|Y$."
+ EFFECT_ADD_COUNTRY_TO_TECH_SHARING_GROUP:1 "@$TAG$$COUNTRY|H$ joins $GROUPNAME|Y$ research sharing group."
+ EFFECT_REMOVE_COUNTRY_FROM_TECH_SHARING_GROUP:1 "@$TAG$$COUNTRY|H$ leaves $GROUPNAME|Y$ research sharing group."
  EFFECT_MODIFY_COUNTRY_TECH_SHARING_BONUS:0 "$BONUS|+%0$ Technology Sharing bonus from $GROUPNAME|Y$."
  EFFECT_CREATE_UNIT:1 "Create $OWNER|H$ unit"
  EFFECT_CREATE_UNIT_LOCATION:0 "Create $OWNER|H$ unit in $STATE|H$\n"
@@ -256,6 +262,7 @@
  EFFECT_UNLOCK_DECISION_TIMED_HEADER:0 "Removed after $DAYS|H$ days."
  EFFECT_UNLOCK_DECISION_REMOVE_HEADER:0 "When decision is removed:"
  EFFECT_UNLOCK_DECISION:0 "Unlocks Decision: $NAME|H$$EFFECT$"
+ EFFECT_UNLOCK_DECISION_BOP: "Unlocks Balance of Power Decision: $NAME|H$$EFFECT$"
  EFFECT_UNLOCK_DECISION_CATEGORY:0 "Unlocks $NAME|H$ Decisions."
  EFFECT_MODIFY_BUILDING_RESOURCES:0 "Modify $BUILDING|H$ resource output by: $AMOUNT|+=$£resources_strip|$FRAME$."
  EFFECT_ADD_MAX_TRAIT:0 "Adds $NUM|G$ empty assignable trait slot."
@@ -285,8 +292,8 @@
  EFFECT_RECALL_VOLUNTEERS_FROM:0 "Recall all volunteer forces from $COUNTRY|H$"
  EFFECT_ACTIVATE_TARGETED_DECISION:0 "Activate $NAME|H$"
  EFFECT_REMOVE_TARGETED_DECISION:0 "Remove $NAME|H$"
- EFFECT_MODIFY_TIMED_IDEA_INCREASE:0 "Increase duration of '$IDEA|H$' until $DATE$ (§H+§!$DAYS|H$ days).\n"
- EFFECT_MODIFY_TIMED_IDEA_DECREASE:0 "Decrease duration of '$IDEA|H$' until $DATE$ (§H-§!$DAYS|H$ days).\n"
+ EFFECT_MODIFY_TIMED_IDEA_INCREASE:1 "Increase duration of '$IDEA|H$' until $DATE$ (§H+§!$TIME_DESC$).\n"
+ EFFECT_MODIFY_TIMED_IDEA_DECREASE:1 "Decrease duration of '$IDEA|H$' until $DATE$ (§H-§!$TIME_DESC$).\n"
  EFFECT_ACTIVATE_DECISION:1 "Activate decision: $NAME|H$"
  EFFECT_REMOVE_DECISION:0 "Remove decision: $NAME|H$"
  EFFECT_SET_TRUCE:0 "Enter Truce with $COUNTRY|H$ until $DATE|H$"
@@ -350,6 +357,8 @@
  add_ruling_to_com_tt:0 "Add all §Y[ROOT.GetRulingIdeology]§! support to §Ycommunism§!."
  add_ruling_to_neu_tt:0 "Add all §Y[ROOT.GetRulingIdeology]§! support to §Yneutrality§!."
  if_they_accept_tt:0 "\n§YEffects if they accept:§!"
+ if_they_accept_newline_tt: "\n§YEffects if they accept:§!\n"
+ we_will_gain_tt: "§YWe will gain§!:"
  THIS_IS_WIP_TT:0 "§RTHIS IS WORK IN PROGRESS§!"
  EFFECT_PROMOTE_CHARACTER:1 "$NAME$ becomes country leader"
  EFFECT_BUILD_RAILWAY:0 "Build a level $LEVEL|Y$ railway from $FROM|Y$ to $TO|Y$."
@@ -362,6 +371,7 @@
  EFFECT_PARTY_LEADER_STARTS:0 "Party leader"
  EFFECT_EVERY_SUBJECT_COUNTRY_STARTS:0 "Every subject country"
  if_they_refuse_tt:0 "\n§YEffects if they refuse:§!"
+ if_they_refuse_newline_tt: "\n§YEffects if they refuse:§!\n"
  EFFECT_CHARACTER_LIST_LAND_UNIT_LEADERS:0 "§YGenerals & Field Marshals§! :"
  EFFECT_CHARACTER_LIST_ADMIRALS:0 "§YAdmirals§! :"
  EFFECT_CHARACTER_LIST_POLITICAL_ADVISORS:0 "§YPolitical Advisors§! :"
@@ -383,12 +393,48 @@
  EFFECT_BREAK_EMBARGO:0 "Breaks the embargo with $COUNTRY|H$"
  EFFECT_ADD_RANDOM_UNIT_TRAIT:0 "Adds a random valid unit leader trait to divisional commander"
  
+ EFFECT_MIO_ADD_FUNDS: "Funds: $VAL|=+0$"
+ EFFECT_MIO_SET_FUNDS: "Set Funds to $VAL|H0$"
+ EFFECT_MIO_ADD_SIZE_SINGULAR: "Gain $VAL|=+0$ Size"
+ EFFECT_MIO_ADD_SIZE_PLURAL: "Gain $VAL|=+0$ Sizes"
+ EFFECT_MIO_COMPLETE_TRAIT: "Gain §G1§! Size and complete Trait $TRAIT|H$"
+ EFFECT_MIO_UNLOCK_TRAIT: "Unlock Trait $TRAIT|H$"
+ EFFECT_CONTEXT_MIO: "$ORGANISATION|H$($FLAG$)"
+ EFFECT_MIO_ADD_TASK_CAPACITY: "$MODIFIER_MIO_TASK_CAPACITY$: $VAL|=+0$"
+ EFFECT_MIO_SET_TASK_CAPACITY: "Set $MODIFIER_MIO_TASK_CAPACITY$ to $VAL|H0$"
+ EFFECT_MIO_ADD_RESEARCH_BONUS: "$MODIFIER_MIO_RESEARCH_BONUS$: $VAL|=+%$"
+ EFFECT_MIO_SET_RESEARCH_BONUS: "Set $MODIFIER_MIO_RESEARCH_BONUS$ to $VAL|H%$"
+ EFFECT_MIO_ADD_RESEARCH_ASSIGN_COST: "$MODIFIER_MIO_DESIGN_TEAM_ASSIGN_COST$: $VAL|=-2%$"
+ EFFECT_MIO_SET_RESEARCH_ASSIGN_COST: "Set $MODIFIER_MIO_DESIGN_TEAM_ASSIGN_COST$ to $VAL|H2$"
+ EFFECT_MIO_ADD_PRODUCTION_ASSIGN_COST: "$MODIFIER_MIO_INDUSTRIAL_MANUFACTURER_ASSIGN_COST$: $VAL|=-2%$"
+ EFFECT_MIO_SET_PRODUCTION_ASSIGN_COST: "Set $MODIFIER_MIO_INDUSTRIAL_MANUFACTURER_ASSIGN_COST$ to $VAL|H2$"
+ EFFECT_MIO_ADD_DESIGN_CHANGE_ASSIGN_COST: "$MODIFIER_MIO_DESIGN_TEAM_CHANGE_COST$: $VAL|=-2%$"
+ EFFECT_MIO_SET_DESIGN_CHANGE_ASSIGN_COST: "Set $MODIFIER_MIO_DESIGN_TEAM_CHANGE_COST$ to $VAL|H2$"
+ EFFECT_MIO_ADD_FUNDS_GAIN_FACTOR: "$MODIFIER_MIO_FUNDS_GAIN$: $VAL|=+2%$"
+ EFFECT_MIO_SET_FUNDS_GAIN_FACTOR: "Set $MODIFIER_MIO_FUNDS_GAIN$ to $VAL|H2%$"
+ EFFECT_MIO_ADD_SIZEUP_REQUIREMENT_FACTOR: "$MODIFIER_MIO_FUNDS_SIZE_UP_REQUIREMENT$: $VAL|=-2%$"
+ EFFECT_MIO_SET_SIZEUP_REQUIREMENT_FACTOR: "Set $MODIFIER_MIO_FUNDS_SIZE_UP_REQUIREMENT$ to $VAL|H2%$"
+ EFFECT_MIO_ADD_POLICY_COST: "$NAME|Y$: $MODIFIER_MIO_POLICY_COST_FACTOR$: £GFX_pol_power_icon $VAL|=-0$"
+ EFFECT_MIO_SET_POLICY_COST: "$NAME|Y$: Set $MODIFIER_MIO_POLICY_COST_FACTOR$ to £GFX_pol_power_icon $VAL|H0$"
+ EFFECT_MIO_ADD_POLICY_COOLDOWN: "$NAME|Y$: $MODIFIER_MIO_POLICY_COOLDOWN_FACTOR$: $VAL|=+0$"
+ EFFECT_MIO_SET_POLICY_COOLDOWN: "$NAME|Y$: Set $MODIFIER_MIO_POLICY_COOLDOWN_FACTOR$ to $VAL|H0$"
+ EFFECT_MIO_SET_NAME_KEY: "Is renamed $NAME|H$"
+ EFFECT_MIO_UNLOCK_MIO: "Unlocks Military Industrial Organization $NAME|Y$"
+ EFFECT_MIO_UNLOCK_POLICY: "Unlocks MIO Policy $NAME|Y$"
+ EFFECT_ADD_CIC: "Add $CIC_BANK_HEADER$: $VAL|=+0$"
+ EFFECT_SHOW_MIO_TOOLTIP_MIO_NAME: "$NAME$"
+ EFFECT_SHOW_MIO_TOOLTIP_INITIAL_TRAIT_NAME: "($NAME|Y$)"
+ EFFECT_MIO_SET_ICON: "Changes icon"
+
+ EFFECT_MARKET_CREATE_PURCHASE_CONTRACT: "Creating purchase contract of $BUYER|H$ buying $EQUIPMENT$ for $CIVS|H$ civilian factories from $SELLER|H$."
+ EFFECT_MARKET_CANCEL_PURCHASE_CONTRACT: "Canceling purchase contract of $BUYER|H$ buying $EQUIPMENT$ for $CIVS|H$ civilian factories from $SELLER|H$."
+ EFFECT_MARKET_ADD_EQUIPMENT_SUBSIDY: "Adding an equipment subsidy to $COUNTRY|H$ with $CIC|H$ £GFX_civ_factory_output, for $TYPE|H$, targeting $SELLERS|H$"
  EFFECT_ADD_POWER_BALANCE:1 "$POWER_BALANCE|Y$ begins in [root.GetName] with $SIDE1|Y$ and $SIDE2|Y$ sides. It starts with $VALUE|%0Y$ progress towards $TRENDING_SIDE|Y$."
  EFFECT_REMOVE_POWER_BALANCE:0 "$POWER_BALANCE|Y$ ends in [root.GetName]"
  EFFECT_ADD_POWER_BALANCE_SIDE:0 "$SIDE|Y$ is added to $POWER_BALANCE|Y$"
  EFFECT_REMOVE_POWER_BALANCE_SIDE:0 "$SIDE|Y$ is removed from $POWER_BALANCE|Y$"
  EFFECT_SET_POWER_BALANCE_VALUE:1 "The $POWER_BALANCE|Y$ is set to $VALUE|Y$ on the $TRENDING_SIDE|Y$"
- EFFECT_ADD_POWER_BALANCE_VALUE:1 "The $POWER_BALANCE|Y$ moves $TREND$$PERCENT|%1Y$ towards the side of $SIDE|Y$"
+ EFFECT_ADD_POWER_BALANCE_VALUE:2 "The $POWER_BALANCE|Y$ moves $TREND$$PERCENT|%1Y$ towards the side of $SIDE|Y$ (result: $PREDICTED_VALUE|%1Y$ on the side of $PREDICTED_SIDE|Y$)"
  EFFECT_ADD_POWER_BALANCE_MODIFIER:1 "Adds modifier $MODIFIER|H$ to $POWER_BALANCE|Y$ - $DESC$"
  EFFECT_REMOVE_POWER_BALANCE_MODIFIER:1 "Removes modifier $MODIFIER|H$ from $POWER_BALANCE|Y$ - $DESC$"
  EFFECT_REMOVE_ALL_POWER_BALANCE_MODIFIERS:0 "Removes all modifiers from $POWER_BALANCE|Y$: $LIST$"
