--- a/bicemodded/localisation/english/production_l_english.yml
+++ b/bicemodded/localisation/english/production_l_english.yml
@@ -42,6 +42,7 @@
  PRODUCTION_EFFICIENCY_WITH_GAIN:2 "£prod_eff  §TProduction Efficiency: $AMOUNT|H2%$§! ($GAIN|H3%$ per day)"
  PRODUCTION_EFFICIENCY_DESC:0 "§TAverage Factory Production Efficiency.\nProduction Efficiency Increases by $VALUE|H=2$%/unit produced split evenly on active Factories.§!"
  PRODUCTION_RESOURCE_PENALTY:0 "§TLack of resources: $AMOUNT|R2%$§!"
+ PRODUCTION_RESOURCE_PENALTY_WITH_MIO: "§TLack of resources: $AMOUNT|R2%$§! ($FROM_MIO$)"
  PRODUCTION_ASSIGN_EQUIPMENT:0 "§TAssign Equipment to start production.§!"
  PRODUCTION_MATERIALS_OIL:0 "Oil"
  PRODUCTION_MATERIALS_ALUMINIUM:0 "Aluminum"
@@ -66,9 +67,12 @@
  PRODUCTION_CONSUMER_GOODS_VALUE:0 "$VALUE$"
  PRODUCTION_CONSUMER_GOODS:0 "Consumer Goods"
  PRODUCTION_CONSUMER_GOODS_LABEL:0 "§HConsumer Goods§!"
- PRODUCTION_CONSUMER_GOODS_DESC:1 "With our current Economic Policy, the people expect $PERCENTAGE|H0%$ of our number of Civilian and Military Factories to produce Consumer Goods. This need is filled by Civilian Factories only, leaving us with $OPERATIONAL|H$ factories where $TRADE_USABLE|H$ can be used for trade."
+ PRODUCTION_CONSUMER_GOODS_DESC:2 "With our current Economic Policy, the people expect $PERCENTAGE|H0%$ of our $TOTAL_FACTORIES|H$ Civilian and Military Factories to produce Consumer Goods. This need is filled by our $GENERAL_FACTORIES|H$ Civilian Factories, leaving us with $OPERATIONAL|H$ factories where $TRADE_USABLE|H$ can be used for trade."
  PRODUCTION_CIV_AND_MIL_FACTORIES:0 "Civilian and Military Factories: $KEY|H$"
  PRODUCTION_REQ_CONSUMER_GOODS_FACTORIES:0 "Required Consumer Goods Factories: $KEY|H$"
+ PRODUCTION_CONSUMER_GOODS_FACTORIES_BASE_EXPECTATION: "Base Expectation:"
+ PRODUCTION_CONSUMER_GOODS_FACTORIES_FACTOR: "Factors:"
+ PRODUCTION_CONSUMER_GOODS_FACTORIES_FACTORS_MULTIPLIED: "Factors multiplied together: $PERCENTAGE|H0%$"
  PRODUCTION_MATERIAL_COST_DESC:0 "§TThis Production Line uses $AMOUNT|0H$ unit of $MATERIAL|H$.§!"
  PRODUCTION_MATERIAL_COST_LACKING_DESC:2 "§T$AMOUNT|0H$ more units are required for full efficiency.§!\nProduction will continue at §Rreduced speed§!."
  PRODUCTION_LINE_CANCEL:4 "§GClick§! to §RCancel§! this Production Line.\n§GShift+Click§! to §RCancel§! all Production Lines."
@@ -116,12 +120,11 @@
  PRODICTION_MIC_RECEIVED_FROM_SUBJECT:0 "$AMOUNT|Y$ of military factories are received from our subjects."
  PRODICTION_MIC_SENT_TO_OVERLORD:0 "$AMOUNT|R$ of our military factories are given to our overlord, and we have left only $LEFT|H$."
  PRODICTION_MIC_RECEIVED_FROM_EXILE_DONATIONS:0 "$AMOUNT|Y$ of our military factories are donations from the exiled governments we host."
- PRODUCTION_CIVILIAN_FACTORIES_AVAILABLE:0 "Available for construction: $VALUE|Y$"
- PRODUCTION_CIVILIAN_FACTORIES_CURRENTLY:0 "In Use: $VALUE|R$"
  PRODUCTION_MAX_EFFICIENCY_BASE:0 "Base Cap: $VALUE|Y%$"
  PRODUCTION_MAX_EFFICIENCY_TOT:0 "£prod_eff_cap  Production Efficiency Cap: $VALUE|Y%$"
  PRODUCTION_MAX_EFFICIENCY_HINT:0 "£prod_eff_cap  Production Efficiency Cap determines the maximum value for your £prod_eff  Production Efficiency. It can be increased by £tech_mod Technologies."
  PRODUCTION_RESOURCES_PER_FACTORY:1 "§HResource use per factory:§!"
+ PRODUCTION_RESOURCE_COST: "$VALUE$"
  PRODUCTION_MATERIAL_NO_WASTE:0 "Line is not wasting any of this resource."
  PRODUCTION_MATERIAL_WASTE:0 "Line is wasting $WASTE|R2$ of this resource."
  PRODUCTION_SPEED:0 "Production speed: $SPEED|Y$"
@@ -129,15 +132,25 @@
  INDUSTRIAL_CAPACITY_FACTOR:0 "Factory Output: $VALUE|Y$"
  INDUSTRIAL_CAPACITY_FACTOR_MODIFIERS:0 "Factory Output modified by:"
  INDUSTRIAL_PROGRESS:0 "$BUILDING|H$ is $PROGRESS|0H$/$COST|0H$ ( $VALUE|0%H$ ) completed."
- INDUSTRIAL_PROGRESS_REPAIR:0 "$BUILDING|H$ repair progress: $PROGRESS|%0H$"
+ INDUSTRIAL_PROGRESS_REPAIR:1 "$BUILDING|H$ repair progress: $PROGRESS|%1H$"
  INDUSTRIAL_BASE_FACTORY_OUTPUT:0 "Base factory output: $VALUE|H$"
  INDUSTRIAL_BASE_SPEED:0 "Output from $FACTORIES|0H$ factories: $VALUE|H$"
  PROD_COST_VALUE:0 "£production_cost  $VALUE$"
  NAVPROD_COST_VALUE:0 "£navprod_cost  $VALUE$"
+ PRODUCTION_CIVILIAN_FACTORIES_HEADER: "§HFactories in use§!"
+ PRODUCTION_CIVILIAN_FACTORIES_TOTAL: "Total: $VALUE|Y$"
+ PRODUCTION_CIVILIAN_FACTORIES_AVAILABLE:1 "Unused: $VALUE|Y$"
+ PRODUCTION_CIVILIAN_FACTORIES_CURRENTLY:0 "In Use: $VALUE|R$"
  PRODUCTION_CIVILIAN_FACTORIES_OWNED:0 "Owned: $VAL|H$"
- PRODUCTION_CIVILIAN_FACTORIES_BORROWED:0 "From exports: +$VAL|H$"
- PRODUCTION_CIVILIAN_FACTORIES_FROM_SUBJECTS:0 "From subjects: +$VAL|H$"
+ PRODUCTION_CIVILIAN_FACTORIES_FROM_TRADE: "Trade exports: §G+$VAL$§!"
+ PRODUCTION_CIVILIAN_FACTORIES_FROM_LICENSES: "License exports: §G+$VAL$§!"
+ PRODUCTION_CIVILIAN_FACTORIES_FROM_SUBJECTS:1 "From subjects: §G+$VAL$§!"
+ PRODUCTION_CIVILIAN_FACTORIES_FROM_OTHERS:1 "From other countries: §G+$VAL$§!"
+ PRODUCTION_CIVILIAN_FACTORIES_FROM_OCCUPATION: "From occupation: §G+$VAL$§!"
  PRODUCTION_CIVILIAN_FACTORIES_SENT_TO_MASTER:0 "Given to Overlord: $VAL|R$"
+ PRODUCTION_CIVILIAN_FACTORIES_SENT_TO_OTHERS:0 "Given to other countries: $VAL|R$"
+ PRODUCTION_CIVILIAN_FACTORIES_SENT_TO_TRADE: "Trade imports: $VAL|R$"
+ PRODUCTION_CIVILIAN_FACTORIES_SENT_TO_LICENSES: "License imports: $VAL|R$"
  PRODUCTION_CIVILIAN_FACTORIES_FROM_OTHERS:0 "From other countries: +$VAL|H$"
  PRODUCTION_CIVILIAN_FACTORIES_SENT_TO_OTHERS:0 "Given to other countries: $VAL|R$"
  PRODUCTION_CIVILIAN_FACTORIES_DAMAGED:0 "Damaged: $VAL|R$"
@@ -163,8 +176,9 @@
  CONFIRM_REMOVE_CONVERSION_LEVEL_DESC:0 "Are you sure you want to §Rcancel§! this Conversion?"
  CONFIRM_ADD_CONVERSION_LEVEL_TITLE:0 "Start Conversion"
  CONFIRM_ADD_CONVERSION_LEVEL_DESC:0 "Are you sure you want to §Rconvert§! this Building?"
- PRODUCTION_EFFICIENCY_GAIN_BASE:0 "Daily base gain: $VAL|%Y$"
+ PRODUCTION_EFFICIENCY_GAIN_BASE:1 "Daily base gain: $VAL|H3%$"
  PRODUCTION_RESOURCE_FACTOR:0 "Lack of resources: $VAL|%+$"
+ PRODUCTION_RESOURCE_FACTOR_WITH_MIO: "Lack of resources: $VAL|%+$ ($FROM_MIO$)"
  PRODUCTION_OUTPUT_EXPLAIN:0 "Our $FACTORIES|Y$ £factory_item  Military Factories contribute $OUTPUT|Y$ £production_cost . \n$ITEM|Y$ has a cost of $ITEM_COST|2Y$ £production_cost , which means we can produce $PERTIMEPERIOD$.\n"
  PRODUCTION_OUTPUT_EXPLAIN_REFIT:0 "Our $FACTORIES|Y$ £factory_item  Military Factories contribute $OUTPUT|Y$ £production_cost . \nConverting $FROM|Y$ costs $COST|2Y$ £production_cost , which means we can convert $PERTIMEPERIOD$.\n"
  PRODUCTION_OUTPUT_EXPLAIN_NAVAL:0 "Our $FACTORIES|Y$ £naval_factory_icon  Naval Dockyards contribute £navprod_cost $OUTPUT|Y$.\n$ITEM|Y$ has a cost of $ITEM_COST|2Y$ £navprod_cost , which means we can produce $PERTIMEPERIOD$.\n"
@@ -286,4 +300,14 @@
  PRODUCTION_SUB_UNIT_FILTER:0 "Show only $SUBUNIT|H$ ($COUNT|H$ match)"
  PRODUCTION_EQUIPMENT_ROLE_NO_FILTER:0 "Show all roles"
  PRODUCTION_EQUIPMENT_ROLE_FILTER:0 "Show only equipments with the role $ROLE|H$"
+ PRODUCTION_COST_MODIFIERS: "§Y£production_cost£Production Cost modified by:§!"
+ PRODUCTION_COST_MODIFIER_ITEM: "$REASON$: $VALUE|-%$"
+
+ BONUS_PRODUCTION_COST_FACTOR: "Production cost"
+ BONUS_PRODUCTION_CAPACITY_FACTOR: "Production output"
+ BONUS_PRODUCTION_EFFICIENCY_CAP_FACTOR: "Production efficiency cap"
+ BONUS_PRODUCTION_EFFICIENCY_GAIN_FACTOR: "Production efficiency gain"
+ BONUS_PRODUCTION_RESOURCE_NEED_FACTOR: "Production resource need"
+ BONUS_PRODUCTION_RESOURCE_PENALTY_FACTOR: "Production resource penalty"
+ BONUS_PRODUCTION_CONVERSION_SPEED_FACTOR: "Production conversion speed"
 
