--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
  RESEARCH_BONUSES_TOOLTIP:0 "Limited technology bonuses we have:"
  RESEARCH_BONUSES_EMPTY_TOOLTIP:0 "Limited technology bonuses will be listed here."
- RESEARCH_BONUS_SPEED_DESC:0 "§Y$COUNT$x§! $VALUE|G%0$ research speed $NAME$"
- RESEARCH_BONUS_AHEAD_DESC:1 "§Y$COUNT$x§! $VALUE|G.0$ years of ahead of time reduction $NAME$"
- RESEARCH_BONUS_SPEED_AHEAD_DESC:1 "§Y$COUNT$x§! $VALUE1|G%0$ research speed and $VALUE2|G.0$ years of ahead of time reduction $NAME$"
+ RESEARCH_BONUS_SPEED_DESC:1 "§Y$COUNT$x§! $VALUE|G%0$ research speed from $NAME$"
+ RESEARCH_BONUS_AHEAD_DESC:2 "§Y$COUNT$x§! $VALUE|G.1$ years of ahead of time reduction from $NAME$"
+ RESEARCH_BONUS_SPEED_AHEAD_DESC:2 "§Y$COUNT$x§! $VALUE1|G%0$ research speed and $VALUE2|G.1$ years of ahead of time reduction from $NAME$"
  RESEARCH_BONUS_SPEED_NO_COUNT_DESC:1 "Research speed will be increased by $VALUE|G%0$"
  RESEARCH_BONUS_AHEAD_NO_COUNT_DESC:1 "Ahead of time penalty will be reduced by $VALUE|.0G$ years"
  RESEARCH_BONUS_SPEED_AHEAD_NO_COUNT_DESC:2 "Research speed will be increased by $VALUE|G%0$ and ahead of time penalty reduced by $VALUE2|.0G$ years"
@@ -114,17 +114,17 @@
  heavy_ind_tooltip:0 "This Technology Boosts production of §YMedium§!, §YHeavy§! and §YAmphibious§! armour.\n"
  artillery_folder:0 "Artillery"
  artillery_folder_desc:0 "Artillery, Anti-Tank & Anti-Aircraft weapons for divisions."
- land_doctrine_folder:0 "Land doctrine"
+ land_doctrine_folder:0 "Land Doctrine"
  land_doctrine_folder_desc:0 "Land doctrine, the ways in which your ground forces fight."
  naval_folder:0 "Naval"
  naval_folder_desc:0 "Ships and submarines."
  mtgnavalfolder:0 "Naval"
  mtgnavalfolder_desc:0 "Ships and submarines. Research new modules to customize your ships."
- naval_doctrine_folder:0 "Naval doctrine"
+ naval_doctrine_folder:0 "Naval Doctrine"
  naval_doctrine_folder_desc:0 "Naval doctrine, how your Navy fights."
  air_techs_folder:0 "Air"
  air_techs_folder_desc:0 "Aircraft."
- air_doctrine_folder:0 "Air doctrine"
+ air_doctrine_folder:0 "Air Doctrine"
  air_doctrine_folder_desc:0 "Air doctrine, how your Airforce fights."
  industry_folder:0 "Industry"
  industry_folder_desc:0 "Industry and production."
@@ -1442,8 +1442,12 @@
  RESEARCH_PROGRESS_DONE:0 "§TResearched time: $WEEKS|H$§!"
  RESEARCH_PROGRESS_COMPACT:0 "§T$DAYS|H$ day(s)§!"
  RESEARCH_PROGRESS_COMPACT_WITH_XP:0 "§T$DAYS|H$ day(s) ($XP_TEXT$)§!"
+ RESEARCH_PROGRESS_DAYS: "$NUM|H$"
+ RESEARCH_PROGRESS_DAYS_GOOD: "$NUM|G$ £increase_reversed_texticon "
+ RESEARCH_PROGRESS_DAYS_BAD: "$NUM|R$ £decrease_reversed_texticon "
  RESEARCH_PROGRESS_INSTANT:0 "§TInstantly§!"
  already_researching:0 "§GYou are already researching this technology.§!"
+ RESEARCH_DESIGN_TEAM_IS_BUSY: "$NAME|H$ is currently busy:"
  AIR_TITLE_CAS:0 "Close Air\nSupport"
  AIR_TITLE_FIGHTER_GENERAL:0 "Fighter\nAircraft"
  AIR_TITLE_LONG_RANGE_FIGHTER:0 "Long Range\nFighter"
@@ -2184,4 +2188,77 @@
  motti_tactics_desc:0 "Our highly mobile troops surround the enemy, cut him off from supply and harass him constantly, no way to retreat, no way of escape."
  offensive_operations:0 "Offensive Operations"
  offensive_operations_desc:0 "It is about time to bring the fight to the enemy, the days where we hunkered down and ambushed from the shadows are over. Rise up!"
+ 
+ special_forces_doctrine: "Special Forces Doctrine"
+ special_forces_doctrine_folder: "Special Forces Doctrine"
+ special_forces_doctrine_folder_desc: "How our special forces are trained."
+ MOUNTAINEERS_DOCTRINE_LABEL: "Mountaineers"
+ MARINES_DOCTRINE_LABEL: "Marines"
+ PARATROOPERS_DOCTRINE_LABEL: "Paratroopers"
+ MOUNTAINEERS_DOCTRINE_DESC: "A strong military focus on regiments accustomed to adverse terrain will give us the edge in outmaneuvering and denying our opponents."
+ MARINES_DOCTRINE_DESC: "An elevated Marine Corps ensures that no enemy coastline will be safe. Our elite Marines excel at operating under fire in the most hostile situations."
+ PARATROOPERS_DOCTRINE_DESC: "Airborne assault is the future of warfare. Elevating the paratroopers brings us the perfect synergy between air power and ground assault."
+ special_forces_mountaineers: "Elevate the Mountaineers"
+ special_forces_mountaineers_desc: "Inhospitable environments and bitter conflicts attract the toughest soldiers to our elite forces. Enshrining their primacy in our doctrinal philosophy ensures we will continue to benefit from the recruitment of the very best."
+ special_forces_paratroopers: "Elevate the Paratroopers"
+ special_forces_paratroopers_desc: "There's nothing quite as terrifying as the skies going dark with the sight of a thousand troop-filled transport planes. Our doctrinal philosophy must take advantage of the shock and awe that the airborne instills."
+ special_forces_marines: "Elevate the Marine Corps"
+ special_forces_marines_desc: "The Marine Corps serves where no other dare go. From home shore to foreign clime, these experts excel at infiltration and amphibious combat. A wide reach and flexible philosophy should be made core to our military doctrine."
+ ski_troops: "Cold Weather Specialists"
+ ski_troops_desc: "Cold weather specialists are vital to our battlefield tactics. By formally recognizing these experts in our military constitution, we can free up resources and training to elevate them even further."
+ special_forces_recon: "Battlefield Intelligence"
+ special_forces_recon_desc: "Our elite regiments benefit from counter-intelligence and battlefield awareness second to none. Additional training is sure to benefit us further."
+ 
+ mountaineers_combat_1: "Holding the Line"
+ mountaineers_combat_1_desc: "Our elite forces must focus their efforts on holding the areas in which they specialize. A combination of ambush tactics and improved regimental organization ensure that our special forces present a significant defense-in-depth against invading forces."
+ mountaineers_combat_2: "Mountain Artillery"
+ mountaineers_combat_2_desc: "Mountain Artillery regiments are specialized forces designed for the rapid long range support of our elite divisions, having trained and operated in difficult terrain. Their presence significantly enhances the combat capabilities of our special forces."
+ mountaineers_combat_3: "Combined Arms Training"
+ mountaineers_combat_3_desc: "Though our elite regiments operate on a highly independent basis, augmenting their training regimen with a focus on combined arms operations increases their utility on the field."
+ mountaineers_keystone_1: "Backbone of the Armed Forces"
+ mountaineers_keystone_1_desc: "The success of our elite special forces mandates a reorganization of our military philosophy around their presence."
+ mountaineers_keystone_2: "Shared Instructors"
+ mountaineers_keystone_2_desc: "With the knowledge our mountain forces have acquired, it would be foolish not to put this to good use within the other branches of our special forces. We shall institute a programme of instructor rotation in the hope of improving our overall institutional knowledge."
+ paras_dispersed_drop: "Reconnaissance and Sabotage"
+ paras_dispersed_drop_desc: "The nature of our operations mandates that our airborne troops specialize in highly dispersed airdrops, allowing for significant sabotage to take place before the enemy are even aware of our presence."
+ paras_combat_drop: "Combat Insertion"
+ paras_combat_drop_desc: "While dangerous, training our elite forces in direct forced entry techniques can give us significant combat advantages in combination with conventional assault."
+ SF_PARAS_combat_effect_tt: "Enemy divisions in states we §HParadrop§! into will have their current §HOrganization§! reduced.\n\n$PARA_EFFECT_TIMER$"
+ SF_PARAS_sabotage_effect_tt: "Enemy controlled states we §HParadrop§! into will receive damage to §HMilitary Factories§!, §HCivilian Factories§!, and §HInfrastructure§!.\n\n$PARA_EFFECT_TIMER$"
+ PARA_EFFECT_TIMER: "This effect can occur once per state every §H30§! days."
+ paras_airborne_light_armor: "Airborne Armor"
+ paras_airborne_light_armor_desc: "Certain light tanks can be adapted for airborne drop via heavy glider. This novel method of combat insertion may be niche, but provides us with new opportunities."
+ paras_bonus_2: "Strategic Air Lift Corps"
+ paras_bonus_2_desc: "Instituting the creation of a dedicated air lift administration means we can better outfit our cargo planes for the specific purpose of airborne insertion."
+ paras_combat_1: "Airborne Signals"
+ paras_combat_1_desc: "Nothing can compare to a perfect line of communication with our troops behind the lines. Training signal companies for airborne insertion will keep these critical communications going, even in the worst conditions."
+ paras_combat_2: "Airborne Medical Detail"
+ paras_combat_2_desc: "The scale of our airborne operations has increased to such a degree that even essential medical equipment must be prepared for airborne insertion."
+ paras_bonus_1: "Enhanced Navigational Training"
+ paras_bonus_1_desc: "Even the best drop can go awry. We must ensure that our troops are trained well in improvised navigation."
+ paras_keystone_1: "Best of the Best"
+ paras_keystone_1_desc: "Only the most battle-hardened veterans should be considered for our airborne battalions. While this may reduce our field of recruits, it is bound to pay dividends on the battlefield."
+ paras_keystone_2: "Backbone of the Armed Forces"
+ paras_keystone_2_desc: "Our armed forces will henceforth be built upon the skill and training of our airborne troops. The skies will darken at their coming, and our enemy shall know fear."
+ RESEARCH_SPEED: "Research speed:"
+ LIMITED_RESEARCH_BONUS: "Limited bonuses:"
+ cat_scout_plane: "Scout Plane models"
+ cat_maritime_patrol: "Maritime Patrol Plane models"
+
+ mio_cat_tech_light_armor_and_modules: "Light Armor Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_tech_medium_armor_and_modules: "Medium Armor Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_tech_heavy_armor_and_modules: "Heavy Armor Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_all_artillery_equipment: "All Artillery technologies"
+ mio_cat_all_light_fighter_and_modules: "All Fighter Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_all_cas_and_modules: "All CAS Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_all_naval_bomber_and_modules: "All Naval Bomber Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_all_light_aircraft_and_modules: "All Light Aircraft Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_all_medium_aircraft_and_modules: "All Medium Aircraft Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_all_heavy_aircraft_and_modules: "All Heavy Aircraft Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_tech_all_capital_ship_and_modules: "All Capital Ship Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_tech_all_screen_ship_and_modules: "All Screen Ship Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_tech_all_submarine_and_modules: "All Submarine Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_tech_all_carrier_and_modules: "All Carrier Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_tech_all_cruiser_and_modules: "All Cruiser Technologies" #Cannot talk about modules because of DLC lock tack
+ mio_cat_tech_all_destroyer_and_modules: "All Destroyer Technologies" #Cannot talk about modules because of DLC lock tack
  
