--- a/bicemodded/localisation/english/stats_l_english.yml
+++ b/bicemodded/localisation/english/stats_l_english.yml
@@ -36,7 +36,7 @@
  STAT_ARMY_HARDNESS:0 "Hardness: "
  STAT_ARMY_HARDNESS_DESC:0 "§T§HHardness§! represents how much of your §HDivision§! is made up of armored or at least protected vehicles.\n\nWhen attacked, a Division adds together all Soft Attacks and Hard Attacks. A Division with high §HHardness§! will suffer fewer §HSoft Attacks§! and more §HHard Attacks§! - and vice versa.§!"
  STAT_ARMY_HARDNESS_VALUE:0 "$VALUE|H1%$"
- STAT_ARMY_HARDNESS_DIFF:0 " $VALUE|=+1$"
+ STAT_ARMY_HARDNESS_DIFF:0 " $VALUE|=+1%$"
  STAT_ARMY_SOFT_ATTACK:0 "Soft attack: "
  STAT_ARMY_SOFT_ATTACK_DESC:0 "How many attacks the unit can make versus enemies with low hardness."
  STAT_ARMY_SOFT_ATTACK_VALUE:0 "$VALUE|H1$"
@@ -52,17 +52,17 @@
  STAT_ARMY_RECON_MOD_VALUE:1 " $VALUE|=+1%$"
  STAT_ARMY_ENTRENCHMENT:0 "Entrenchment: "
  STAT_ARMY_ENTRENCHMENT_DESC:0 "The ability to make proper defensive entrenchments before a hostile attack. \nEach level gives a §G2%§! advantage in defensive combat."
- STAT_ARMY_ENTRENCHMENT_VALUE:0 "$VALUE|H0$"
- STAT_ARMY_ENTRENCHMENT_DIFF:0 " $VALUE|=+0$"
- STAT_ARMY_ENTRENCHMENT_MOD_VALUE:1 "$VALUE|=+1%$"
- STAT_ARMY_ENTRENCHMENT_MOD_DIFF:0 " $VALUE|=+1$"
+ STAT_ARMY_ENTRENCHMENT_VALUE:1 "$VALUE|H1$"
+ STAT_ARMY_ENTRENCHMENT_DIFF:1 " $VALUE|=+1$"
+ STAT_ARMY_ENTRENCHMENT_MOD_VALUE:2 "$VALUE|=+2%$"
+ STAT_ARMY_ENTRENCHMENT_MOD_DIFF:1 " $VALUE|=+2$"
  STAT_ARMY_FUEL_CONSUMPTION:0 "Fuel use: "
  STAT_ARMY_FUEL_CONSUMPTION_DESC:0 "How much fuel this unit uses daily."
  STAT_ARMY_FUEL_CONSUMPTION_VALUE:0 "$VALUE|H1$"
  STAT_ARMY_FUEL_CONSUMPTION_DIFF:0 " $VALUE|=-1$"
  STAT_ARMY_SUPPLY_CONSUMPTION:0 "Supply use: "
  STAT_ARMY_SUPPLY_CONSUMPTION_DESC:0 "How much supply a unit consumes per day."
- STAT_ARMY_SUPPLY_CONSUMPTION_MOD_VALUE:1 "$VALUE|=-1%$"
+ STAT_ARMY_SUPPLY_CONSUMPTION_MOD_VALUE:1 "$VALUE|=-1$"
  STAT_ARMY_SUPPLY_CONSUMPTION_VALUE:0 "$VALUE|H2$"
  STAT_ARMY_SUPPLY_CONSUMPTION_DIFF:0 " $VALUE|=-2$"
  STAT_ARMY_SUPPLY_CONSUMPTION_FACTOR:0 "Supply Usage: "
@@ -282,6 +282,7 @@
  STAT_ADJUSTER_MOVEMENT_DIFF:0 " $VALUE|=+1%$"
  STAT_MODIFIER_VALUE:0 "$VALUE|=G0%$"
  STAT_MODIFIER_DIFF:0 "$VALUE|=+0%$"
+ STAT_MODIFIER_DIFF_NEG: "$VALUE|=-0%$"
  STAT_ARMY_INITIATIVE:0 "Initiative: "
  STAT_ARMY_INITIATIVE_VALUE:0 "$VALUE|H2%$"
  STAT_ARMY_INITIATIVE_DIFF:0 "$VALUE|+=2%$"
@@ -334,12 +335,17 @@
  STAT_MISSION_CONVOY_ESCORT_EFFICIENCY:1 "Escort Efficiency: "
  STAT_MISSION_CONVOY_ESCORT_EFFICIENCY_VALUE:0 "$VALUE|H0%$"
  STAT_MISSION_CONVOY_ESCORT_EFFICIENCY_DESC:0 "How quickly Escorts can defend a Convoy under attack."
+ STAT_NAVY_WEATHER_PENALTY: "Weather Penalty: "
+ STAT_NAVY_WEATHER_PENALTY_VALUE: "$VALUE|H0%$"
+ STAT_NAVY_WEATHER_PENALTY_DIFF: "$VALUE|H0%$"
+ STAT_NAVY_WEATHER_PENALTY_DESC: "How much this ship reduces the effect of weather based modifiers."
+ 
  SOFT_ATTACK_TAKEN:0 "§TSoft Attack Taken: §!"
  HARD_ATTACK_TAKEN:0 "§THard Attack Taken: §!"
  STAT_TOOLTIP_DESIGNER_DIFF:0 "$NAME|H$: $VALUE$"
  STAT_COMMON_BUILD_COST_IC_T_CONVERTING:0 "§TConversion cost: §!"
  STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR:0 "Eq. Capture Ratio: "
- STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR_DESC:0 "Percentage of the equipment that will be captured from enemy loses."
+ STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR_DESC:0 "Percentage of the equipment that will be captured from enemy losses."
  STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR_VALUE:0 "$VALUE|+0%$"
  STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR_DIFF:0 "$VALUE|+0%$"
 
@@ -388,4 +394,6 @@
  STAT_RAILWAY_GUN_ATTACK_RANGE_DESC:1 "The maximum distance at which the unit can provide bombardment support."
  STAT_RAILWAY_GUN_ATTACK_RANGE_VALUE:1 "$VALUE|H0$ km"
  STAT_RAILWAY_GUN_ATTACK_RANGE_DIFF:1 " $VALUE|=+0$ km"
+
+ STAT_STRATEGIC_ATTACK: "Strategic Bombing"
 
