--- a/bicemodded/localisation/english/triggers_l_english.yml
+++ b/bicemodded/localisation/english/triggers_l_english.yml
@@ -328,8 +328,8 @@
  TRIGGER_IS_NOT_PUPPET:1 "$COUNTRY|H$ is fully independent."
  TRIGGER_IS_NOT_PUPPET_OF:3 "Is not a puppet of $MASTER|H$"
  TRIGGER_IS_PUPPET_OF:3 "Is a puppet of $MASTER|H$"
- TRIGGER_IS_SUBJECT:1 "$COUNTRY|H$ is a subject of another country."
- TRIGGER_IS_NOT_SUBJECT:1 "$COUNTRY|H$ is fully independent."
+ TRIGGER_IS_SUBJECT:2 "Is a subject of another country"
+ TRIGGER_IS_NOT_SUBJECT:2 "Is fully independent"
  TRIGGER_IS_NOT_SUBJECT_OF:1 "Is not a subject of $MASTER|H$"
  TRIGGER_IS_SUBJECT_OF:1 "Is a subject of $MASTER|H$"
  TRIGGER_HAS_NOT_SUBJECT:0 "Is not the overlord of $SUBJECT|H$"
@@ -630,7 +630,7 @@
  TRIGGER_LEGITIMACY:0 "Legitimacy"
  TRIGGER_HAS_RULE:0 "$RULE$"
  TRIGGER_HAS_NOT_RULE:0 "Does not have the rule: $RULE$"
- TRIGGER_HAS_DYMAMIC_MODIFIER:0 "Has Modifier: $NAME|H$ ($NUM|H$ days)"
+ TRIGGER_HAS_DYMAMIC_MODIFIER:0 "Has Modifier: $NAME|H$" 
  TRIGGER_HAS_NOT_DYMAMIC_MODIFIER:0 "Does not have Modifier: $NAME|H$"
  TRIGGER_HAS_MINES:0 "At least $NUM|H$ mines in $REGION|H$"
  TRIGGER_HAS_NOT_MINES:0 "At most $NUM|H$ mines in $REGION|H$"
@@ -740,7 +740,7 @@
  TRIGGER_IS_FEMALE_LEADER_COUNTRY:0 "Country leader is female"
  TRIGGER_IS_NOT_OPERATION:0 "Is not operation of $OPERATION|H$"
  TRIGGER_IS_OPERATION:0 "Is operation of $OPERATION|H$"
- TRIGGER_NUM_RESEARCHED_TECHS:0 "researched technologies"
+ TRIGGER_NUM_RESEARCHED_TECHS:0 "researched technologies (Current: §Y[?num_researched_technologies]§!)"
  owns_or_subject_of_tt:1 "is owned by §Y[ROOT.GetFlag] [ROOT.GetNameDef]§! or a §YSubject§!\n"
  owns_or_subject_of_tt_NOT:1 "is NOT owned by §Y[ROOT.GetFlag] [ROOT.GetNameDef]§! or a §YSubject§!\n"
  controls_or_subject_of_tt:0 "is controlled by §Y[ROOT.GetFlag] [ROOT.GetNameDef]§! or a §YSubject§!\n"
@@ -751,8 +751,8 @@
  has_same_ideology_tt_NOT:0 "Does NOT have the same §YIdeology§! as §Y[ROOT.GetFlag] [ROOT.GetNameDef]§!\n"
  TRIGGER_HAS_CHARACTER:0 "$NAME|Y$ is active in this country"
  TRIGGER_NOT_HAS_CHARACTER:0 "$NAME|Y$ is not active in this country"
- TRIGGER_IS_CHARACTER: "is the same character as $INPUTNAME|Y$"
- TRIGGER_NOT_IS_CHARACTER: "is not the same character as $INPUTNAME|Y$"
+ TRIGGER_IS_CHARACTER:0 "is the same character as $INPUTNAME|Y$"
+ TRIGGER_NOT_IS_CHARACTER:0 "is not the same character as $INPUTNAME|Y$"
  TRIGGER_CANT_BE_COUNTRY_LEADER:1 "$NAME|Y$ cannot become country leader"
  TRIGGER_CAN_BE_COUNTRY_LEADER:1 "$NAME|Y$ can become country leader"
  TRIGGER_HAS_TERRAIN:0 "Has terrain $TYPE|H$"
@@ -795,8 +795,8 @@
  TRIGGER_HAS_AIR_LEDGER:0 "Has an air ledger"
  TRIGGER_HAS_NOT_CHARACTER_SLOT:0 "$CHARACTER$ does not have character slot $SLOT|H$"
  TRIGGER_HAS_CHARACTER_SLOT:1 "$CHARACTER$ has character slot $SLOT|H$"
- TRIGGER_CAN_BE_FIRED: "$SLOT$can be fired"
- TRIGGER_CANT_BE_FIRED: "$SLOT$can't be fired"
+ TRIGGER_CAN_BE_FIRED:0 "$SLOT$can be fired"
+ TRIGGER_CANT_BE_FIRED:0 "$SLOT$can't be fired"
  french_communist_civil_war_intervention_tt:0 "Both of the following are true:\n    At War\n    Not actively intervening in the Spanish Civil War"
  TRIGGER_HAS_IDEOLOGY:1 "$NAME|Y$ has ideology $IDEOLOGY|Y$"
  TRIGGER_HAS_NOT_IDEOLOGY:1 "$NAME|Y$ does not have ideology $IDEOLOGY|Y$"
@@ -829,8 +829,8 @@
  TRIGGER_HAS_NOT_POWER_BALANCE:0 "$POWER_BALANCE|Y$ is not active in [root.GetName]"
  TRIGGER_HAS_ANY_POWER_BALANCE:1 "Has an active §HBalance of Power§!"
  TRIGGER_HAS_NOT_ANY_POWER_BALANCE:1 "Has no active §HBalance of Power§!"
- TRIGGER_POWER_BALANCE_VALUE_MORE_THAN:1 "The $POWER_BALANCE|Y$ is more than $PERCENT|Y$ on the $SIDE|Y$ side"
- TRIGGER_POWER_BALANCE_VALUE_LESS_THAN:1 "The $POWER_BALANCE|Y$ is less than $PERCENT|Y$ on the $SIDE|Y$ side"
+ TRIGGER_POWER_BALANCE_VALUE_MORE_THAN:2 "The $POWER_BALANCE|Y$ is more than $PERCENT|%1Y$ on the $SIDE|Y$ side"
+ TRIGGER_POWER_BALANCE_VALUE_LESS_THAN:2 "The $POWER_BALANCE|Y$ is less than $PERCENT|%1Y$ on the $SIDE|Y$ side"
  TRIGGER_POWER_BALANCE_DAILY_MORE_THAN:1 "The $POWER_BALANCE|Y$ daily change is more than $PERCENT|%1Y$ towards the $SIDE|Y$ side"
  TRIGGER_POWER_BALANCE_DAILY_LESS_THAN:1 "The $POWER_BALANCE|Y$ daily change is less than $PERCENT|%1Y$ towards the $SIDE|Y$ side"
  TRIGGER_POWER_BALANCE_WEEKLY_MORE_THAN:1 "The $POWER_BALANCE|Y$ weekly change is more than $PERCENT|%1Y$ towards the $SIDE|Y$ side"
@@ -878,11 +878,11 @@
  TRIGGER_PC_DOES_STATE_NOT_STACK_DISMANTLED:0 "State did not get stacked with dismantle in the peace conference"
  TRIGGER_PC_DOES_STATE_STACK_DEMILITARIZED:0 "State got stacked with demilitarize in the peace conference"
  TRIGGER_PC_DOES_STATE_NOT_STACK_DEMILITARIZED:0 "State did not get stacked demilitarize in the peace conference"
- TRIGGER_PC_IS_NOT_CLAIMED_AND_TAKEN_BY: "Is not claimed and taken by $COUNTRY$" ##NEVER DISPLAYED OUTSIDE DEBUG
- TRIGGER_PC_IS_CLAIMED_AND_TAKEN_BY: "Is claimed and taken by $COUNTRY$" ##NEVER DISPLAYED OUTSIDE DEBUG
- TRIGGER_PC_IS_CLAIMED: "Is claimed"
- TRIGGER_PC_IS_NOT_CLAIMED: "Is not claimed"
-
+ TRIGGER_PC_IS_NOT_CLAIMED_AND_TAKEN_BY:0 "Is not claimed and taken by $COUNTRY$" ##NEVER DISPLAYED OUTSIDE DEBUG
+ TRIGGER_PC_IS_CLAIMED_AND_TAKEN_BY:0 "Is claimed and taken by $COUNTRY$" ##NEVER DISPLAYED OUTSIDE DEBUG
+ TRIGGER_PC_IS_CLAIMED:0 "Is claimed"
+ TRIGGER_PC_IS_NOT_CLAIMED:0 "Is not claimed"
+ 
  BOMBING_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Bombing"
  CASUALTIES_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Casualties"
  CONVOYS_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Sunk Convoys"
@@ -891,7 +891,47 @@
  TRIGGER_HAS_NOT_RESOURCES_RIGHT:0 "$COUNTRY|H$ does not have all the rights to $RESOURCES|H$"
  TRIGGER_OVERLORD:0 "Overlord"
  
- TRIGGER_PC_IS_INSIDE_INFLUENCE_RANGE: "Is inside max AI influence range" ##Will never be displayed
- TRIGGER_PC_IS_OUTSIDE_INFLUENCE_RANGE: "Is outside max AI influence range" ##Will never be displayed
+ TRIGGER_PC_IS_INSIDE_INFLUENCE_RANGE:0 "Is inside max AI influence range" ##Will never be displayed
+ TRIGGER_PC_IS_OUTSIDE_INFLUENCE_RANGE:0 "Is outside max AI influence range" ##Will never be displayed
  TRIGGER_HAS_COMPLETED_CUSTOM_ACHIEVEMENT:1 "Has completed achievement $ACHIEVEMENT|H$"
  TRIGGER_HAS_NOT_COMPLETED_CUSTOM_ACHIEVEMENT:1 "Has not completed achievement $ACHIEVEMENT|H$"
+
+ TRIGGER_IS_ONE_STATE_ISLAND: "Is one island"
+ TRIGGER_IS_ONE_NOT_STATE_ISLAND: "Is not one island"
+ 
+ TRIGGER_MIO_ANY_ORGANIZATION_STARTS: "Any military industrial organization"
+ TRIGGER_MIO_ALL_ORGANIZATION_STARTS: "All military industrial organization"
+ TRIGGER_MIO_HAS_ORGANIZATION: "Has military industrial organization $NAME|H$"
+ TRIGGER_MIO_NOT_HAS_ORGANIZATION: "Does not have military industrial organization $NAME|H$"
+ TRIGGER_MIO_CURRENT_SIZE: "Current Size"
+ TRIGGER_MIO_CURRENT_NUMBER_OF_COMPLETED_TRAITS: "Number of completed Traits"
+ TRIGGER_MIO_FLAG_NOT_SET: "Not:"
+ TRIGGER_MIO_FLAG_SET: ""
+ TRIGGER_MIO_NOT_IS_MIO: "Is not Military Industrial Organization $NAME|H$"
+ TRIGGER_MIO_IS_MIO: "Is Military Industrial Organization $NAME|H$"
+ TRIGGER_MIO_NOT_HAS_TRAIT: "Does not have Trait $TRAIT|H$"
+ TRIGGER_MIO_HAS_TRAIT: "Has Trait $TRAIT|H$"
+ TRIGGER_MIO_NOT_IS_TRAIT_AVAILABLE: "Trait $TRAIT|H$ is not available"
+ TRIGGER_MIO_IS_TRAIT_AVAILABLE: "Trait $TRAIT|H$ is available"
+ TRIGGER_MIO_NOT_IS_TRAIT_COMPLETED: "Trait $TRAIT|H$ is not completed"
+ TRIGGER_MIO_IS_TRAIT_COMPLETED: "Trait $TRAIT|H$ is completed"
+ TRIGGER_MIO_NOT_IS_ASSIGNED: "Is not assigned to any task"
+ TRIGGER_MIO_IS_ASSIGNED: "Is assigned to at least one task"
+ TRIGGER_MIO_HAS_NOT_POLICY: "Does not have Policy $NAME|Y$"
+ TRIGGER_MIO_HAS_POLICY: "Has Policy $NAME|Y$"
+ TRIGGER_MIO_HAS_NOT_POLICY_ACTIVE: "Does not have active Policy $NAME|Y$"
+ TRIGGER_MIO_HAS_POLICY_ACTIVE: "Has active Policy $NAME|Y$"
+ TRIGGER_MIO_HAS_NOT_RESEARCH_CATEGORY: "Does not have research category $NAME|Y$"
+ TRIGGER_MIO_HAS_RESEARCH_CATEGORY: "Has research category $NAME|Y$"
+ TRIGGER_MIO_HAS_NOT_EQUIPMENT_TYPE: "Does not have equipment type $NAME|Y$"
+ TRIGGER_MIO_HAS_EQUIPMENT_TYPE: "Has equipment type $NAME|Y$"
+ TRIGGER_MIO_IS_NOT_VISIBLE: "Is not visible"
+ TRIGGER_MIO_IS_VISIBLE: "Is visible"
+ TRIGGER_MIO_IS_NOT_AVAILABLE: "Is not available"
+ TRIGGER_MIO_IS_AVAILABLE: "Is available"
+ can_unlock_new_special_forces_tree_none: "£trigger_yes §HBranch Specialisms§! Remaining: §H1§!"
+ can_unlock_new_special_forces_tree_more_yes: "£trigger_yes §HBranch Specialisms§! Remaining: §H[?sf_trees]§!"
+ can_unlock_new_special_forces_tree_more_no: "£trigger_no §HBranch Specialisms§! Remaining: §R0§!"
+ FRA_SNCAC_formed: "Has reorganized the Aviation Industry"
+ DEN_danish_trading_partner_flag: "Is trading with [DEN.GetNameDef]"
+ trade_partner_not_at_war_tt: "§Y[ROOT.GetNameWithFlag]§! cannot buy or sell arms to countries at war"
