--- a/bicemodded/localisation/english/core_l_english.yml
+++ b/bicemodded/localisation/english/core_l_english.yml
@@ -405,7 +405,7 @@
  FREQUENCY_WEEKLY:0 "weekly"
  FREQUENCY_MONTH:0 "§Tmonth(s)§!"
  FREQUENCY_MONTHLY:0 "monthly"
- FREQUENCY_YEAR:0 "year"
+ FREQUENCY_YEAR:1 "year(s)"
  FREQUENCY_YEARLY:0 "yearly"
  INIT_MAP_LOGIC:0 "Initializing map logic"
  INIT_GAMESTATE:0 "Initializing game"
@@ -1130,6 +1130,7 @@
  COMBAT_SPEED_MODIFIER:1 "In Combat: x$VALUE|H%$"
  TERRAIN_SPEED_MODIFIER:2 "$NAME$: $VALUE|+=%$"
  FORT_SPEED_MODIFIER:0 "Fort: $VALUE|+=%$"
+ SNOW_SPEED_MODIFIER: "Snow: $VALUE|+=%$"
  RIVER_MODIFIER:1 "River: $VALUE|+=%$"
  LARGE_RIVER_MODIFIER:1 "Large river: $VALUE|+=%$"
  AIR_SUPERIORITY_SPEED_MODIFIER:1 "Air superiority: $VALUE|+=%$"
@@ -1209,6 +1210,9 @@
  CURRENT_FOCUS:0 "$FOCUS|H$"
  BYPASS_FOCUS_TRIGER:1 "The following will bypass the focus:"
  BYPASS_FOCUS:1 "Bypass"
+ FOCUS_ORIGINATOR: "Originator ($TAG$$COUNTRY|UH$):"
+ FOCUS_OTHER_MEMBERS: "Other Members ($LIST$):"
+ FOCUS_EVERY_MEMBER: "Every Member:"
  DIPLOMACY_CREATE_FACTION_OPP_IDEO:0 "$COUNTRY$ must be $IDE$ to be in a faction with us.\n"
  DIPLOMACY_NOT_ENOUGH_IDEOLOGY_POPULARITY:0 "$NAME|H$ requires the joining country to have $IDEOLOGY|H$ popularity greater than $MIN|H%0$ (currently $CUR|H%0$)"
  CLICK_OPEN_FOCUS:0 "\n\n§GClick to show your focus tree§!"
@@ -1237,6 +1241,7 @@
  VOL_SINGLE_DIVISION:0 "1 Division"
  SEND:0 "Send"
  UNASSIGNED_EXPEDITIONARY_UNITS:1 "No Army"
+ ELIGIBLE_UNASSIGNED_DIVISIONS: "$DIVISION_COUNT$ eligible divisions not assigned to any army."
  DIPLOMACY_RETURN_EXP_FORCE_TITLE:0 "Return Expeditions"
  DIPLOMACY_RETURN_EXP_FORCE_ACTION_DESC:0 "Gain control over all expeditionary forces sent to them."
  RETURN_ALL_EXPEDITIONARY_FORCES_NO_FORCES:0 "You don't have any expeditionary forces in their country."
@@ -1778,6 +1783,7 @@
  SETTINGS_ACCESSIBILITY_CHAT_LARGE_FONTS_VALUE_INFO:0 "Toggle usage of large fonts for Multiplayer Chat messages"
  SETTINGS_ACCESSIBILITY_STT_SHORTCUT_INPUT:0 "Multiplayer Chat Speech To Text Shortcut"
  SETTINGS_ACCESSIBILITY_STT_SHORTCUT_INPUT_INFO:0 "Customize the shortcut for toggling §HSpeech to Text§! on or off"
+ SETTINGS_ACCESSIBILITY_IN_GAME_CLOCK: "Show in game clock"
  CHAT_CVAA_MESSAGE:0 "$NAME$ says $MESSAGE$"
  CHAT_CVAA_SYSTEM_NAME:0 "System"
  SUPPLY_TRUCKS:0 "Supply Trucks"
@@ -1884,6 +1890,7 @@
  BOTTLENECK_CONNECTION_REASON_LEVEL:0 "From Level $LEVEL|H$: $NUMBER$"
  GENERATE:0 "Generate"
  LIST_AND:0 ", and "
+ LIST_OR: ", or "
  CHARACTER_NAME_TOOLTIP:0 "$NAME|Y$"
  CHARACTER_ADVISOR_ON_ADD_TOOLTIP:0 "When hired:"
  CHARACTER_ADVISOR_ON_REMOVE_TOOLTIP:0 "When fired:"
@@ -1955,4 +1962,14 @@
  SUNK_BY_MINES:0 "mines"
  PARADROP_PLANES_REQUIRED: "\n§RThis order cannot be executed:§!\nAn additional $WINGS|H$ transport wing(s) are required."
  RETAIN_CORES:0 "Retain States With Our Core"
+ VALUE_CLICK_ADD_1: "§GClick§! to add §Y+$NUM$§!"
+ VALUE_CLICK_ADD_2: "§GCtrl + Click§! to add §Y+$NUM$§!"
+ VALUE_CLICK_ADD_3: "§GShift + Click§! to add §Y+$NUM$§!"
+ VALUE_CLICK_SUB_1: "§GClick§! to subtract §Y$NUM$§!"
+ VALUE_CLICK_SUB_2: "§GCtrl + Click§! to subtract §Y$NUM$§!"
+ VALUE_CLICK_SUB_3: "§GShift + Click§! to subtract §Y$NUM$§!"
+ CLEAR_ALL: "Clear all"
+ REMOVE: "Remove"
+ TECH_DISALLOWED_BECAUSE: "§RThis branch requires:§!"
+ SUBUNIT_PER_BATTALION_MODIFIER_DESC: "\n§LBattalion Modifiers add their listed stats multiplied by the number of target battalions in the division.§!"
  DIVISION_VIEW_HAS_MEDALS:0 "This division can be awarded a §HMedal§!.\n§GClick to open Medals view.§!"
