--- a/bicemodded/localisation/english/deployment_l_english.yml
+++ b/bicemodded/localisation/english/deployment_l_english.yml
@@ -141,8 +141,8 @@
  CANT_CHANGE_DUE_TO_SPECIAL_FORCES_CAP:0 "Cannot change to this template because that would case us to exceed our special forces cap"
  CANT_CHANGE_DUE_TO_DIVISION_CAP:0 "Cannot change to this template because that would case us to exceed our division cap"
  NO_SPECIAL_FORCES:0 "This template does not contain any special forces"
- SPECIAL_FORCES_IN_TEMPLATE:1 "This template contains $NUM|Y$ special forces battalions."
- SPECIAL_FORCES_CAP_DESC:0 "You are currently fielding $USED|Y$ and training $IN_TRAINING|Y$ of our $CAP|Y$ allowed special forces battalions"
+ SPECIAL_FORCES_IN_TEMPLATE:2 "This template uses $NUM|Y$ special forces capacity."
+ SPECIAL_FORCES_CAP_DESC:1 "You are currently fielding $USED|Y$ and training $IN_TRAINING|Y$ of our $CAP|Y$ allowed special forces capacity"
  SPECIAL_FORCES_CAP_LIMIT_DESC:0 "This division is using the special forces cap, because that is the lowest cap."
  DIVISION_CAP_OF_TEMPLATE:0 "This template has a cap of $NUM|Y$."
  DIVISION_CAP_USAGE_DESC:0 "You are currently fielding $USED|Y$ and training $IN_TRAINING|Y$ of our $CAP|Y$ allowed divisions for $NAME|Y$"
@@ -153,3 +153,4 @@
  DECOMMISSION_TEMPLATE_TOGGLE_ON_DESC:0 "§GClick§! to decommission this template, marking it as retired."
  DECOMMISSION_TEMPLATE_TOGGLE_OFF:0 "Recommission"
  DECOMMISSION_TEMPLATE_TOGGLE_OFF_DESC:0 "§GClick§! to recommission this template, marking it as in service."
+ DEPLOYMENT_VIEW_SPECIAL_FORCES_DETAILS: "$USED$/$CAP$"
