--- a/bicemodded/localisation/english/factions_l_english.yml
+++ b/bicemodded/localisation/english/factions_l_english.yml
@@ -93,3 +93,15 @@
  COMMONWEALTH_FACTION:0 "Commonwealth Alliance"
  NPTO:0 "North Pacific Treaty Organization"
  TRIPLE_ENTENTE:0 "Triple Entente"
+ ETH_organization_of_african_unity_faction:0 "Organization of African Unity"
+ ITA_united_socialist_front:0 "United Socialist Front"
+ ITA_italian_confederation:0 "Italian Confederation"
+ ITA_free_states_of_europe:0 "Free States of Europe"
+ ITA_italian_league:0 "Italian League"
+ scandinavian_defense_union: "Scandinavian Defense Union"
+ FIN_northern_defense_front_faction: "Northern Defense Front"
+ FIN_finnish_supremacy_league: "Finnish Supremacy League"
+ NOR_northern_international: "Norintern"
+ DEN_nordic_cooperation_alliance: "Nordic Cooperation Alliance"
+ DEN_northern_national_front: "Northern National Front"
+ DEN_northern_security_pact: "Northern Security Pact"
