--- a/bicemodded/localisation/english/focus_filter_tag_l_english.yml
+++ b/bicemodded/localisation/english/focus_filter_tag_l_english.yml
@@ -30,3 +30,8 @@
  FOCUS_FILTER_ARMY_XP:0 "Army Experience"
  FOCUS_FILTER_NAVY_XP:0 "Navy Experience"
  FOCUS_FILTER_AIR_XP:0 "Air Experience"
+ FOCUS_FILTER_POLITICAL_CHARACTER: "Political Character"
+ FOCUS_FILTER_MILITARY_CHARACTER: "Military Character"
+ FOCUS_FILTER_INTERNATIONAL_TRADE: "International Trade"
+ FOCUS_FILTER_FOLKHEMMET: "Folkhemmet"
+ FOCUS_FILTER_HISTORICAL: "Historical"
