--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -919,6 +919,7 @@
  anti_democrat:0 "Anti-Democrat"
  great_war_hero:0 "Great War Hero"
  popular_figurehead2:0 "Popular Figurehead"
+ popular_figurehead3: "$popular_figurehead$"
  imperial_connections:0 "Imperial Connections"
  kaiserin_of_the_people:0 "Kaiserin of the People"
  victoria_iii:0 "Victoria III"
@@ -1260,6 +1261,10 @@
  TRAIT_UNLOCKED_BY_MIN_RANK:0 "Requires a Skill level of at least §Y$RANK$§! to become an advisor."
  TRAIT_UNLOCKS_ADVISOR_ROLE:0 "Unlocks §Y$ADVISORSLOT$§! role: §Y$ADVISORNAME$§!\n"
  TRAIT_MODIFIER_FOR_ADVISOR_RANK:0 "At Skill §Y$RANK$§!:\n\n$TEXT$"
+ TRAIT_PARENT_PRECONDITION_ALL_OF_TITLE: "§YRequires all of the following:§!"
+ TRAIT_PARENT_PRECONDITION_N_OF_TITLE: "§YRequires $NUMBER$ of the following:§!"
+ TRAIT_PARENT_PRECONDITION_OR_SUB_ENTRY: "- One of the following:"
+ TRAIT_PARENT_PRECONDITION_PARENT: "- $NAME$"
  
  morges_champion:0 "Champion of Front Morges"
  polish_peasant_champion:0 "Peasant Hero"
