--- a/bicemodded/localisation/english/unit_l_english.yml
+++ b/bicemodded/localisation/english/unit_l_english.yml
@@ -3,6 +3,7 @@
  fort:0 "Fort"
  river:0 "River"
  amphibious:0 "Amphibious"
+ snow: "Snow"
  CURRENT_STRENGTH:0 "Current Fighting Strength: $PER|%0H$\n"
  CURRENT_MANPOWER:0 " - Current Manpower: $VAL|*H1$ ($PER|%0H$)\n"
  CURRENT_EQUIPMENT_RATIO:0 " - Current Equipment ratio: $PER|%0H$\n"
@@ -284,6 +285,7 @@
  UNIT_LEADER_PROMOTE_NEED_CP:0 "Need $CP|2R$ more CP."
  CANNOT_MOVE_WHILE_TRAINING:0 "Cannot move while conducting §HArmy Exercises§!"
  UNIT_DEMILITARIZED:0 "$STATE|H$ is a demilitarized zone."
+ UNIT_BORDER_WAR: "$STATE|H$ is in a border war."
  UNIT_IMPASSABLE:0 "Path to $STATE|H$ is impassable."
  UNIT_ADJECENCY_RULE_BLOCKED:0 "Movement is blocked due to the $RULE_NAME|H$ permission"
  UNIT_CANT_MOVE_TO_OCCUPIED_NEUTRAL:0 "§RCannot move to a location§! owned by $OWNER|Y$.\nWe need to ask them for a §GMilitary Access§! first."
@@ -351,6 +353,7 @@
  category_nav_bomber:0 "Naval Bombers"
  category_tac_bomber:0 "Tactical Bombers"
  category_strat_bomber:0 "Strategic Bombers"
+ category_anti_air: "Anti-Air Battalions"
  TRANSPORT_ALREADY_ACTIVE:0 "We are already being transported"
  TRANSPORT_NO_NAVAL_BASE:0 "Cannot transport to a non-naval base location"
  TRANSPORT_NO_FROM_NAVAL_BASE:0 "Cannot transport from a non-naval base location"
@@ -373,14 +376,15 @@
  NAVAL_INVASION_OVER_CAP:1 "§RNaval Invasion Capacity Exceeded:§!\nUsed in invasions $USED|Y$\nTotal limit $MAX|Y$\nSelected divisions $SELECTION|R$.\nResearch more £tech_mod Transports Technology to increase your Naval Invasion Capacity."
  MODIFIER_NAVAL_INVASION_CAPACITY:0 "Naval Invasion Capacity"
  MODIFIER_NAVAL_INVASION_CAPACITY_DESC:0 "Total number of divisions that can be assigned to a naval invasion order."
+ naval_invasion_capacity_tt: " $MODIFIER_NAVAL_INVASION_CAPACITY$: $RIGHT|+=0$"
  motorized_rocket_brigade:0 "Motorized Rocket Artillery"
  motorized_rocket_brigade_short:0 "Mot. R. Artillery"
  motorized_rocket_brigade_desc:0 "Self-propelled rocket artillery allows for larger, multiple rocket launchers which can both move in and out quickly after striking a target area."
  NAVAL_SUPREMACY:0 "§HNaval Supremacy:§! $VALUE|%H$"
  NAVAL_REGION_ACCESS_LEVEL:0 "Access level: $LVL$"
- NAVAL_REGION_ACCESS_ALLOWED:0 "§GAllowed§!"
- NAVAL_REGION_ACCESS_AVOID:0 "§HAvoid§!"
- NAVAL_REGION_ACCESS_BLOCKED:0 "§RBlocked§!"
+ NAVAL_REGION_ACCESS_ALLOWED_DESC:0 " - Our §HFleets§! and §HTrade routes§! will move through this region as normal."
+ NAVAL_REGION_ACCESS_AVOID_DESC:1 " - Our §HFleets§! and §HTrade routes§! will try to §Havoid§! this region, unless there is no other route."
+ NAVAL_REGION_ACCESS_BLOCKED_DESC:0 " - Our §HTrade routes§! will §Rnever pass§! through this region.\n - Our §HFleets§! will §Rnever pass§! through this region, unless there is no other route."
  NAVAL_REGION_ACCESS_ALLOWED_DESC:0 " - §HFleets§! and §HTrade routes§! will move through this region as normal."
  NAVAL_REGION_ACCESS_AVOID_DESC:1 " - §HFleets§! and §HTrade routes§! will try to §Havoid§! this region, unless there is no other route."
  NAVAL_REGION_ACCESS_BLOCKED_DESC:0 " - §HTrade routes§! will §Rnever pass§! through this region.\n - §HFleets§! will §Rnever pass§! through this region, unless there is no other route."
@@ -753,6 +757,8 @@
  paratrooper_desc:0 "By incorporating airborne forces into our army, we can make forced entries and position key troops in previously inaccessible areas, allowing for new tactical opportunities."
  marine:0 "Marines"
  marine_desc:0 "Troops specializing in amphibious warfare are growing ever more indispensable. Improvised methods and equipment become things of the past as our naval infantry is supported by specialized landing craft and training."
+ marine_commando:0 "Marine Commandos"
+ marine_commando_desc:0 "Troops specializing in amphibious raids are growing ever more indispensable. Improvised methods and equipment become things of the past as our naval infantry is supported by specialized landing craft and training."
  mountaineers:0 "Mountaineers"
  mountaineers_desc:0 "Combat in mountain ranges exposes troops to many perils, but sometimes cannot be avoided. Providing our soldiers with specialized training for this environment, we can minimize these risks."
  recon:0 "Recon Company"
@@ -812,4 +818,52 @@
  ARMY_COMPOSITION_HEADER:0 "§YComposition§!\n"
  ARMY_COMPOSITION_SPECIAL_HEADER:0 "\nIt also gets bonuses based on this:\n"
  ARMY_COMPOSITION_DELAYED:0 "The composition controls which bonuses are applied from advisors and commanders. Battalions lacking equipment contribute less than those that are fully equipped."
+ 
+ SUBUNIT_CATEGORY_ADD: "§HBattalion Modifier: $CATEGORY$§!"
+ SUBUNIT_CATEGORY_ADD_STAT: "$NAME$: $VALUE|+=$\n"
+ SUBUNIT_CATEGORY_MULT_STAT: "$NAME$: $VALUE|+=%$\n"
+ SUBUNIT_CATEGORY_ADD_STAT_VALUE: "$VALUE|+=$"
+ SUBUNIT_CATEGORY_MULT_STAT_VALUE: "$VALUE|+=%$"
+ EFFECT_ON_ALL: " to "
+ airborne_light_armor:0 "Airborne Light Armor"
+ airborne_light_armor_desc:0 "Using extremely light armored vehicles and an innovative glider mechanism, airborne armor divisions are no longer a thing of fancy. The tactical advantage of such rapid and unexpected deployment is hard to ignore."
+ mountaineers_ski: "Ski Troops"
+ category_mountaineers: "All Mountaineers"
+ category_paratroopers: "All Paratroopers"
+ category_marines: "All Marines"
+ rangers_support: "Rangers"
+ rangers_support_desc: "Rangers are first-line elite skirmish troops, specializing in infiltration and close-quarters combat." #TODO CD
+ rangers: "Rough Terrain Specialists"
+ rangers_desc: "Specializing in infiltration and tactical awareness, we will benefit from accentuating the hostile environment training our Rangers receive."
+ pioneer_support: "Pioneers"
+ pioneer_support_desc: "Pioneers are talented engineers, adept at solidfying beachheads, general engineering projects, and consolidating gains."
+ marines_shore_parties: "Shore Parties"
+ marines_shore_parties_desc: "Often first into the the breach at landings, shore parties are specialized groups of combat engineers with expertise in establishing a foothold under fire."
+ marines_jungle_troops: "Jungle Specialists"
+ marines_jungle_troops_desc: "Adept at clearing dense terrain, these marines excel at large scale offensive operations and engineering in rough terrain."
+ marines_recon: "Gruelling Training Regimen"
+ marines_recon_desc: "Nothing prepares a man for war, but our combat instructors assure us they can come close enough that only the most hardened recruits make it to where it counts."
+ marines_commandoes: "Marine Commandos"
+ marines_commandoes_desc: "Our marines have proven their worth at extended operations behind enemy lines. It is time we took the step of cementing this practice in our doctrine, and organizing the troops around effective hit-and-run behaviour."
+ marines_expeditionary: "Expeditionary Units"
+ marines_expeditionary_desc: "Coordinated strikes benefit from improved inter-disciplinary planning and logistics. As our doctrinal philosophy advances, lending greater support to these task forces is sure to benefit us."
+ marines_expeditionary_blowtorch: "Blowtorch and Corkscrew"
+ marines_expeditionary_blowtorch_desc: "The perfect combination of naval, air, and specialized land force can render any objective securable. This combined-arms approach to offensive warfare shall become the manifestation of our logistical prowess."
+ marines_expeditionary_support: "Expeditionary Task Forces"
+ marines_expeditionary_support_desc: "By now, the clear importance of branch cooperation is impossible to overstate. Dedicating task force logistics to our operations truly makes us a force to be reckoned with."
+ marines_commandos_demolition: "Demolition Experts"
+ marines_commandos_demolition_desc: "Demolition is an art that we can put to good use. Sabotage might be a dirty tactic, but there's no denying its efficacy."
+ marines_commandoes_mechanised: "Mechanized Marine Corps"
+ marines_commandoes_mechanised_desc: "The ability to consolidate upon a successful landing can only be enhanced by equipping our vanguard appropriately. This requires a shift in our production strategy as well as doctrine."
+ category_amphibious_tanks: "Amphibious Armor"
+ SF_MARINES_exfiltration_effect_tt: "Marine Commandos have the ability to exfiltrate from any coastal province."
+ SF_marine_demoliton_effect_TT: "Marine Commando divisions will cause §H1§! level of damage to all strategic state buildings after any successful naval invasion."
+ marines_commandoes_mechanised_non_mtg: "Dedicated Training"
+ marines_commandoes_mechanised_non_mtg_desc: "Let us enhance our elite cadre of special forces, albeit at the expense of their wider applications."
+ winter_logistics_support: "Winter Logistics Company"
+ winter_logistics_support_desc: "Providing the leg infantry with the appropriate gear to fight under winter conditions."
+ long_range_patrol_support: "Long Range Patrol Company"
+ long_range_patrol_support_desc: "Elite infantry skilled in reconnaissance and destroy missions."
+ category_cavalry: "Horseback Cavalry"
+ category_support_artillery: "Support Artillery"
  
