--- a/bicemodded/localisation/english/wtt_decisions_l_english.yml
+++ b/bicemodded/localisation/english/wtt_decisions_l_english.yml
@@ -87,10 +87,12 @@
  form_country_norway_required_states_tt:0 "Controls all §YNorwegian§! states."
  form_country_sweden_required_states_tt:0 "Controls all §YSwedish§! states."
  form_country_denmark_required_states_tt:0 "Controls all §YDanish§! states."
+ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\n"
  form_country_finland_required_states_tt:0 "Controls all §YFinnish§! states."
  form_country_norway_coring_states_tt:0 "Gain cores on all §YNorwegian§! states.\n"
  form_country_sweden_coring_states_tt:0 "Gain cores on all §YSwedish§! states.\n"
  form_country_denmark_coring_states_tt:0 "Gain cores on all §YDanish§! states.\n"
+ form_country_iceland_coring_states_tt:0 "Gain cores on all §YIcelandic§! states.\n"
  form_country_finland_coring_states_tt:0 "Gain cores on all §YFinnish§! states.\n"
  form_scandinavia_denmark_required_states_tt:0 "Controls all mainland §YDanish§! states."
  form_scandinavia_denmark_coring_states_tt:0 "Gain cores on all mainland §YDanish§! states.\n"
@@ -883,6 +885,8 @@
  fight_on_the_beaches_speech:0 "'We Shall Fight on the Beaches' Speech"
  operation_fork:0 "Operation Fork"
  operation_fork_desc:0 "The newly-independent nation of Iceland occupies an extremely strategically-important location in the North Atlantic. Loss of Norway would put the defenseless island in a vulnerable position. We must beat our enemies to the invasion and occupation of Iceland, lest they obtain the island's strategic bases from which they might endanger our supply lines. Only with our protection will the Icelanders be safe from our enemies."
+ ENG_operation_valentine: "Operation Valentine"
+ ENG_operation_valentine_desc: "We shall shield the Faroe Islands from all the severities of war and establish ourselves there conveniently by sea and air until the moment comes when they will be handed back to Denmark liberated from the foul thraldom into which they have been plunged by hostile aggression, whilst also strengthening our own position in the North Sea."
  invade_ireland:0 "Invade Ireland"
  invade_ireland_desc:0 "We must secure the safety of our convoys by any means necessary. An invasion of Ireland may not be palatable to some of us, but if that is what it takes to acquire the use of their air bases, then so be it."
  macdonald_proposal:0 "The Macdonald Proposal"
